Published multiple files

--- a/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 02 - Земля как концепт.md
+++ b/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 02 - Земля как концепт.md
@@ -5,7 +5,7 @@
 # Лекция 2: Земля как концепт. Делёз и Гваттари
 
 **Основные понятия:** [[Кейс Геофилософия/3 Понятия/Земля vs Территория\|Земля vs Территория]], [[Детерриторизация\|Детерриторизация]], [[Кейс Геофилософия/3 Понятия/Ризома\|Ризома]], [[Кейс Геофилософия/3 Понятия/Ритурнель\|Ритурнель]], [[Кейс Геофилософия/3 Понятия/Тело без органов\|Тело без органов]], [[Кейс Геофилософия/3 Понятия/Шизоанализ\|Шизоанализ]]
-**Ключевые авторы:** [[Делёз, Жиль\|Делёз, Жиль]], [[Кейс Геофилософия/4 Авторы/Гваттари, Феликс\|Гваттари, Феликс]], [[Кейс Геофилософия/4 Авторы/Ницше, Фридрих\|Ницше, Фридрих]]
+**Ключевые авторы:** [[Кейс Геофилософия/4 Авторы/Делёз, Жиль\|Делёз, Жиль]], [[Кейс Геофилософия/4 Авторы/Гваттари, Феликс\|Гваттари, Феликс]], [[Кейс Геофилософия/4 Авторы/Ницше, Фридрих\|Ницше, Фридрих]]
 
 ## Тезисы
 
@@ -15,10 +15,10 @@
 - **Статья об островах**: [[География\|География]] напрямую связывается с воображаемым. Бессознательное бредит о континентах, а не об Эдипе.
 
 ### 2. "Анти-Эдип": Машины и территории
-- **[[Кейс Геофилософия/3 Понятия/Шизоанализ\|Шизоанализ]] vs. Психоанализ**: "Прогулка шизофреника" — это практика **[[Детерриторизация и Ретерриторизация\|Детерриторизации]]**, создания новой земли с каждым шагом.
+- **[[Кейс Геофилософия/3 Понятия/Шизоанализ\|Шизоанализ]] vs. Психоанализ**: "Прогулка шизофреника" — это практика **[[Кейс Геофилософия/3 Понятия/Детерриторизация и Ретерриторизация\|Детерриторизации]]**, создания новой земли с каждым шагом.
 - **Машинная онтология**: Все есть машины желания. [[Кейс Геофилософия/3 Понятия/Земля\|Земля]] — это тоже производящая машина, "[[Кейс Геофилософия/3 Понятия/Тело без органов\|Тело без органов]]".
 - **[[Кейс Геофилософия/3 Понятия/Земля vs Территория\|Земля vs Территория]]**:
-    - **[[Территория\|Территория]]**: Ограниченное, кодированное пространство (государство).
+    - **[[Кейс Геофилософия/3 Понятия/Территория\|Территория]]**: Ограниченное, кодированное пространство (государство).
     - **[[Кейс Геофилософия/3 Понятия/Земля\|Земля]]**: Детерриторизированное пространство, линии ускользания.
 
 ### 3. "Тысяча плато": Ризома и номадизм
@@ -28,4 +28,4 @@
 
 ### 4. "Что такое философия?": Рождение геофилософии
 - **Философия — это творчество концептов**.
-- **[[Геофилософия\|Геофилософия]]**: Любая философия является геофилософией. Она рождается в конкретном месте (Древняя Греция) из зазора между [[Кейс Геофилософия/3 Понятия/Земля\|Землей]] и [[Территория\|Территорией]].
+- **[[Геофилософия 1\|Геофилософия 1]]**: Любая философия является геофилософией. Она рождается в конкретном месте (Древняя Греция) из зазора между [[Кейс Геофилософия/3 Понятия/Земля\|Землей]] и [[Кейс Геофилософия/3 Понятия/Территория\|Территорией]].
