--- a/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 04 - Политики заботы.md
+++ b/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 04 - Политики заботы.md
@@ -4,7 +4,7 @@
 
 # Лекция 4: Политики заботы. Поврежденная земля, Мортон и Харауэй
 
-**Основные понятия:** [[Кейс Геофилософия/3 Понятия/Поврежденная земля\|Поврежденная земля]], [[Кейс Геофилософия/3 Понятия/Антропоцен\|Антропоцен]], [[Кейс Геофилософия/3 Понятия/Хтулхуцен\|Хтулхуцен]], [[Гиперобъекты\|Гиперобъекты]], [[Кейс Геофилософия/3 Понятия/Темная экология\|Темная экология]], [[Кейс Геофилософия/2 Темы/Политики заботы\|Политики заботы]], [[Кейс Геофилософия/3 Понятия/Симпоэзис\|Симпоэзис]]
+**Основные понятия:** [[Кейс Геофилософия/3 Понятия/Поврежденная земля\|Поврежденная земля]], [[Кейс Геофилософия/3 Понятия/Антропоцен\|Антропоцен]], [[Кейс Геофилософия/3 Понятия/Хтулхуцен\|Хтулхуцен]], [[Кейс Геофилософия/3 Понятия/Гиперобъекты\|Гиперобъекты]], [[Кейс Геофилософия/3 Понятия/Темная экология\|Темная экология]], [[Кейс Геофилософия/2 Темы/Политики заботы\|Политики заботы]], [[Кейс Геофилософия/3 Понятия/Симпоэзис\|Симпоэзис]]
 **Ключевые авторы:** [[Кейс Геофилософия/4 Авторы/Мортон, Тимоти\|Мортон, Тимоти]], [[Кейс Геофилософия/4 Авторы/Харауэй, Донна\|Харауэй, Донна]], [[Кейс Геофилософия/4 Авторы/Брайдотти, Рози\|Брайдотти, Рози]]
 
 ## Тезисы
@@ -15,8 +15,8 @@
     2.  **Отдаление Земли**: Философская позиция "парения над миром" ("[[Кейс Геофилософия/3 Понятия/Глаз Бога\|Глаз Бога]]").
     3.  **[[Кейс Геофилософия/3 Понятия/Опасный постгуманизм\|Опасный постгуманизм]]** ([[Кейс Геофилософия/4 Авторы/Брайдотти, Рози\|Рози Брайдотти]]): Технологии, которые обходятся без человека и несут опасность.
 
-### 2. [[Кейс Геофилософия/4 Авторы/Мортон, Тимоти\|Мортон, Тимоти]]: [[Гиперобъекты\|Гиперобъекты]] и [[Кейс Геофилософия/3 Понятия/Темная экология\|Темная экология]]
-- **[[Гиперобъекты\|Гиперобъекты]]**: Это сущности, настолько растянутые во времени и пространстве, что мы не можем воспринять их целиком. Примеры: глобальное потепление, пластик, капитализм.
+### 2. [[Кейс Геофилософия/4 Авторы/Мортон, Тимоти\|Мортон, Тимоти]]: [[Кейс Геофилософия/3 Понятия/Гиперобъекты\|Гиперобъекты]] и [[Кейс Геофилософия/3 Понятия/Темная экология\|Темная экология]]
+- **[[Кейс Геофилософия/3 Понятия/Гиперобъекты\|Гиперобъекты]]**: Это сущности, настолько растянутые во времени и пространстве, что мы не можем воспринять их целиком. Примеры: глобальное потепление, пластик, капитализм.
 - **Характеристики гиперобъектов**: [[Кейс Геофилософия/3 Понятия/Вязкость\|Вязкость]], [[Кейс Геофилософия/3 Понятия/Другая темпоральность\|другая темпоральность]], [[Кейс Геофилософия/3 Понятия/Нелокальность\|нелокальность]].
 - **[[Кейс Геофилософия/3 Понятия/Темная экология\|Темная экология]]**: Это "экология без Природы". [[Кейс Геофилософия/4 Авторы/Мортон, Тимоти\|Мортон]] утверждает, что сама концепция "Природы" (как чего-то чистого) — это конструкт.
 - **Философия после конца мира**: Мир как универсальное понятие закончился. Мы живем в окружении гиперобъектов.
