--- a/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 05 - Метафизика ландшафта.md
+++ b/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 05 - Метафизика ландшафта.md
@@ -5,7 +5,7 @@
 # Лекция 5: Метафизика ландшафта (Валерий Подорога)
 
 **Основные понятия:** [[Кейс Геофилософия/2 Темы/Метафизика ландшафта\|Метафизика ландшафта]], [[Кейс Геофилософия/3 Понятия/Земля произведений\|Земля произведений]], [[Кейс Геофилософия/3 Понятия/Ландшафт\|Ландшафт]]
-**Ключевые авторы:** [[Кейс Геофилософия/4 Авторы/Подорога, Валерий\|Подорога, Валерий]], [[Кьеркегор, Сёрен\|Кьеркегор, Сёрен]], [[Кейс Геофилософия/4 Авторы/Ницше, Фридрих\|Ницше, Фридрих]], [[Кейс Геофилософия/4 Авторы/Хайдеггер, Мартин\|Хайдеггер, Мартин]]
+**Ключевые авторы:** [[Кейс Геофилософия/4 Авторы/Подорога, Валерий\|Подорога, Валерий]], [[Кейс Геофилософия/4 Авторы/Кьеркегор, Сёрен\|Кьеркегор, Сёрен]], [[Кейс Геофилософия/4 Авторы/Ницше, Фридрих\|Ницше, Фридрих]], [[Кейс Геофилософия/4 Авторы/Хайдеггер, Мартин\|Хайдеггер, Мартин]]
 
 ## Тезисы
 
@@ -22,7 +22,7 @@
     - **Текст**: Произведение, которое собирает все эти элементы.
 
 ### 3. Ландшафтный анализ философов
-- **[[Кьеркегор, Сёрен\|Кьеркегор, Сёрен]] и Земля-море**:
+- **[[Кейс Геофилософия/4 Авторы/Кьеркегор, Сёрен\|Кьеркегор, Сёрен]] и Земля-море**:
     - [[Кейс Геофилософия/3 Понятия/Ландшафт\|Ландшафт]] Кьеркегора — это **гора Мориа**, к которой он совершал экзистенциальное путешествие через **"задержанное дыхание Авраама"**.
 - **[[Кейс Геофилософия/4 Авторы/Ницше, Фридрих\|Ницше, Фридрих]] и Энгадин**:
     - Идея **вечного возвращения** приходит к Ницше у конкретного **камня в Зильс-Марии**, конденсируясь из телесного опыта в ландшафте.
