--- a/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 06 - Феноменология Земли.md
+++ b/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 06 - Феноменология Земли.md
@@ -5,7 +5,7 @@
 
 # Лекция 6: Феноменология Земли (Гуссерль, Мерло-Понти, Деррида)
 
-**Основные понятия:** [[Кейс Геофилософия/2 Темы/Геофеноменология\|Геофеноменология]], [[Кейс Геофилософия/2 Темы/Антикоперниканский поворот\|Антикоперниканский поворот]], [[Плоть мира\|Плоть мира]], [[Трансцендентальная геология\|Трансцендентальная геология]], [[Кейс Геофилософия/3 Понятия/Оседание опыта\|Оседание опыта]]
+**Основные понятия:** [[Кейс Геофилософия/2 Темы/Геофеноменология\|Геофеноменология]], [[Кейс Геофилософия/2 Темы/Антикоперниканский поворот\|Антикоперниканский поворот]], [[Кейс Геофилософия/3 Понятия/Плоть мира\|Плоть мира]], [[Кейс Геофилософия/3 Понятия/Трансцендентальная геология\|Трансцендентальная геология]], [[Кейс Геофилософия/3 Понятия/Оседание опыта\|Оседание опыта]]
 **Ключевые авторы:** [[Кейс Геофилософия/4 Авторы/Гуссерль, Эдмунд\|Гуссерль, Эдмунд]], [[Кейс Геофилософия/4 Авторы/Мерло-Понти, Морис\|Мерло-Понти, Морис]], [[Кейс Геофилософия/4 Авторы/Деррида, Жак\|Деррида, Жак]]
 
 ## Тезисы
@@ -17,9 +17,9 @@
     - Это **"прародина"** и **"сверх-тело"**.
     - Она обеспечивает **покой**, на фоне которого возможно движение.
 
-### 2. [[Кейс Геофилософия/4 Авторы/Мерло-Понти, Морис\|Мерло-Понти, Морис]]: [[Плоть мира\|Плоть мира]] и [[Трансцендентальная геология\|Трансцендентальная геология]]
-- **[[Кейс Геофилософия/3 Понятия/Земля\|Земля]] как гиперболизированная телесность**: Она является **"[[Плоть мира\|Плоть мира]]"**.
-- **[[Трансцендентальная геология\|Трансцендентальная геология]]**:
+### 2. [[Кейс Геофилософия/4 Авторы/Мерло-Понти, Морис\|Мерло-Понти, Морис]]: [[Кейс Геофилософия/3 Понятия/Плоть мира\|Плоть мира]] и [[Кейс Геофилософия/3 Понятия/Трансцендентальная геология\|Трансцендентальная геология]]
+- **[[Кейс Геофилософия/3 Понятия/Земля\|Земля]] как гиперболизированная телесность**: Она является **"[[Кейс Геофилософия/3 Понятия/Плоть мира\|Плоть мира]]"**.
+- **[[Кейс Геофилософия/3 Понятия/Трансцендентальная геология\|Трансцендентальная геология]]**:
     - **[[Кейс Геофилософия/3 Понятия/Феноменология как археология\|Феноменология как археология]]**: Мерло-Понти предлагает исследовать "слои" опыта.
     - **[[Кейс Геофилософия/3 Понятия/Оседание опыта\|Оседание опыта]]**: Глобальный, геологический опыт [[Кейс Геофилософия/3 Понятия/Земля\|Земли]] "оседает" во множестве локальных опытов.
     - **Сплетение времени и пространства**: [[Кейс Геофилософия/3 Понятия/Земля\|Земля]] — это место, где сплетаются историчность и природность.
