--- a/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 08 - Политическая Земля.md
+++ b/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 08 - Политическая Земля.md
@@ -4,17 +4,17 @@
 
 # Лекция 8: Политическая Земля. Шмитт и Латур
 
-**Основные понятия:** [[Кейс Геофилософия/2 Темы/Политическая земля\|Политическая земля]], [[Номос земли\|Номос земли]], [[Кейс Геофилософия/3 Понятия/Суверенитет\|Суверенитет]], [[Кейс Геофилософия/3 Понятия/Чрезвычайное положение\|Чрезвычайное положение]], [[Кейс Геофилософия/3 Понятия/Анти-законы\|Анти-законы]]
+**Основные понятия:** [[Кейс Геофилософия/2 Темы/Политическая земля\|Политическая земля]], [[Кейс Геофилософия/3 Понятия/Номос земли\|Номос земли]], [[Кейс Геофилософия/3 Понятия/Суверенитет\|Суверенитет]], [[Кейс Геофилософия/3 Понятия/Чрезвычайное положение\|Чрезвычайное положение]], [[Кейс Геофилософия/3 Понятия/Анти-законы\|Анти-законы]]
 **Ключевые авторы:** [[Кейс Геофилософия/4 Авторы/Шмитт, Карл\|Шмитт, Карл]], [[Кейс Геофилософия/4 Авторы/Латур, Бруно\|Латур, Бруно]], [[Кейс Геофилософия/4 Авторы/Декарт, Рене\|Декарт, Рене]]
 
 ## Тезисы
 
 ### 1. Переход к [[Кейс Геофилософия/2 Темы/Политическая земля\|политической Земле]]
-- [[Кейс Геофилософия/4 Авторы/Латур, Бруно\|Латур, Бруно]] описывает [[Кейс Геофилософия/3 Понятия/Земля\|Землю]] ([[Гея\|Гея]]) как новую **политическую сущность**, которая проявляет **[[Кейс Геофилософия/3 Понятия/Суверенитет\|Суверенитет]]**.
+- [[Кейс Геофилософия/4 Авторы/Латур, Бруно\|Латур, Бруно]] описывает [[Кейс Геофилософия/3 Понятия/Земля\|Землю]] ([[Кейс Геофилософия/3 Понятия/Гея\|Гея]]) как новую **политическую сущность**, которая проявляет **[[Кейс Геофилософия/3 Понятия/Суверенитет\|Суверенитет]]**.
 - Возникает вопрос: можно ли заключить с ней **договор или контракт**?
 
-### 2. [[Кейс Геофилософия/4 Авторы/Шмитт, Карл\|Шмитт, Карл]] и [[Номос земли\|Номос земли]]
-- **[[Номос земли\|Номос земли]]** — это уникальный пространственный порядок, который определяет территорию, законы и границы общества.
+### 2. [[Кейс Геофилософия/4 Авторы/Шмитт, Карл\|Шмитт, Карл]] и [[Кейс Геофилософия/3 Понятия/Номос земли\|Номос земли]]
+- **[[Кейс Геофилософия/3 Понятия/Номос земли\|Номос земли]]** — это уникальный пространственный порядок, который определяет территорию, законы и границы общества.
 - **Оппозиция Море vs. Суша**: Для [[Кейс Геофилософия/4 Авторы/Шмитт, Карл\|Шмитта]] море является свободным, не поддающимся государственному порядку пространством.
 - **Два типа земли**: [[Кейс Геофилософия/4 Авторы/Шмитт, Карл\|Шмитт]] разделял землю на "цивилизованную" европейскую и "колониальную" землю, которая считалась зоной свободного захвата.
 
