--- a/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 09 - Темная Земля.md
+++ b/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 09 - Темная Земля.md
@@ -17,9 +17,9 @@
 
 ### 2. [[Кейс Геофилософия/4 Авторы/Агамбен, Джорджо\|Агамбен, Джорджо]]: [[Кейс Геофилософия/3 Понятия/Гея vs Хтонь\|Гея vs Хтонь]]
 - В статье "[[Кейс Геофилософия/5 Источники/Статья - Гея и Хтонь (Агамбен)\|Гея и Хтонь]]" [[Кейс Геофилософия/4 Авторы/Агамбен, Джорджо\|Агамбен]] критикует [[Кейс Геофилософия/3 Понятия/Теория Геи\|Теория Геи]] за игнорирование подземного мира.
-- **[[Хтонь\|Хтонь]] первична**: [[Гея\|Гея]] — это лишь "мантия", покрывающая [[Хтонь\|Хтонь]]. [[Хтонь\|Хтонь]] — это бесформенное, скрытое дно.
+- **[[Кейс Геофилософия/3 Понятия/Хтонь\|Хтонь]] первична**: [[Кейс Геофилософия/3 Понятия/Гея\|Гея]] — это лишь "мантия", покрывающая [[Кейс Геофилософия/3 Понятия/Хтонь\|Хтонь]]. [[Кейс Геофилософия/3 Понятия/Хтонь\|Хтонь]] — это бесформенное, скрытое дно.
 - **Человек — хтоническое существо**: *homo* происходит от *humus* (почва).
-- **Забвение [[Хтонь\|Хтони]]**: Экологический кризис связан с использованием подземных ресурсов (нефти) и забвением [[Хтонь\|Хтони]]. Страх смерти порожден отделением жизни ([[Гея\|Гея]]) от смерти ([[Кейс Геофилософия/3 Понятия/Танатосфера\|Танатосфера]], [[Хтонь\|Хтонь]]).
+- **Забвение [[Кейс Геофилософия/3 Понятия/Хтонь\|Хтони]]**: Экологический кризис связан с использованием подземных ресурсов (нефти) и забвением [[Кейс Геофилософия/3 Понятия/Хтонь\|Хтони]]. Страх смерти порожден отделением жизни ([[Кейс Геофилософия/3 Понятия/Гея\|Гея]]) от смерти ([[Кейс Геофилософия/3 Понятия/Танатосфера\|Танатосфера]], [[Кейс Геофилософия/3 Понятия/Хтонь\|Хтонь]]).
 
 ### 3. [[Кейс Геофилософия/2 Темы/Философия нефти и петромодерн\|Философия нефти и петромодерн]]
 - **[[Кейс Геофилософия/3 Понятия/Петромодерн\|Петромодерн]]**: Мы живем в эпоху, где нефть является главным агентом, определяющим современность.
