--- a/src/site/notes/Кейс Геофилософия/2 Темы/Антикоперниканский поворот.md
+++ b/src/site/notes/Кейс Геофилософия/2 Темы/Антикоперниканский поворот.md
@@ -17,5 +17,5 @@
 
 ## Ключевые фигуры
 - **[[Кейс Геофилософия/4 Авторы/Гуссерль, Эдмунд\|Гуссерль, Эдмунд]]**: Первым провозгласил этот поворот в работе "[[Кейс Геофилософия/3 Понятия/Земля как первый ковчег\|Земля как первый ковчег]]".
-- **[[Кейс Геофилософия/4 Авторы/Латур, Бруно\|Латур, Бруно]]**: Активно использует этот термин, призывая перейти от "людей" к "[[Приземленные\|Приземленные]]".
+- **[[Кейс Геофилософия/4 Авторы/Латур, Бруно\|Латур, Бруно]]**: Активно использует этот термин, призывая перейти от "людей" к "[[Кейс Геофилософия/3 Понятия/Приземленные\|Приземленные]]".
 - **[[Кейс Геофилософия/2 Темы/Темные теории\|Темные теории]]**: Все течение можно рассматривать как реализацию антикоперниканского поворота.
