--- a/src/site/notes/Кейс Геофилософия/2 Темы/Метафизика ландшафта.md
+++ b/src/site/notes/Кейс Геофилософия/2 Темы/Метафизика ландшафта.md
@@ -13,6 +13,6 @@
 - **[[Кейс Геофилософия/3 Понятия/Земля произведений\|Земля произведений]]**: Сама философская мысль становится "произведением", которое "обитает в определенной среде".
 
 ## Примеры анализа
-- **[[Кьеркегор, Сёрен\|Кьеркегор, Сёрен]]**: Анализируется через **"задержанное дыхание Авраама"** на горе Мориа.
+- **[[Кейс Геофилософия/4 Авторы/Кьеркегор, Сёрен\|Кьеркегор, Сёрен]]**: Анализируется через **"задержанное дыхание Авраама"** на горе Мориа.
 - **[[Кейс Геофилософия/4 Авторы/Ницше, Фридрих\|Ницше, Фридрих]]**: Идея **вечного возвращения** приходит к нему у конкретного **камня в Зильс-Марии**.
 - **[[Кейс Геофилософия/4 Авторы/Хайдеггер, Мартин\|Хайдеггер, Мартин]]**: Его философия [[Кейс Геофилософия/3 Понятия/Четверица\|четверицы]] неразрывно связана с ландшафтом **[[Шварцвальд\|Шварцвальд]]**.
