--- a/src/site/notes/Кейс Геофилософия/2 Темы/Множественность (миров, природ, земель).md
+++ b/src/site/notes/Кейс Геофилософия/2 Темы/Множественность (миров, природ, земель).md
@@ -13,4 +13,4 @@
 ## Переход к множественности
 - **От мультикультурализма к мультинатурализму**: [[Кейс Геофилософия/4 Авторы/Латур, Бруно\|Латур, Бруно]] и [[Вивейруш де Кастру, Эдуарду\|Вивейруш де Кастру, Эдуарду]] утверждают, что мы должны признать не только множество культур, но и **множество природ**.
 - **Множество земель**: Геофилософия работает не с одной Землей, а с множеством земель: концептуальными, политическими, темными и т.д.
-- **[[Кейс Геофилософия/3 Понятия/Ризома\|Ризома]]**: Концепт [[Делёз, Жиль\|Делёза]] является моделью для мышления о множественности.
+- **[[Кейс Геофилософия/3 Понятия/Ризома\|Ризома]]**: Концепт [[Кейс Геофилософия/4 Авторы/Делёз, Жиль\|Делёза]] является моделью для мышления о множественности.
