--- a/src/site/notes/Кейс Геофилософия/2 Темы/Проблема оснований и безосновности.md
+++ b/src/site/notes/Кейс Геофилософия/2 Темы/Проблема оснований и безосновности.md
@@ -4,11 +4,11 @@
 
 # Проблема оснований и безосновности
 
-**Проблема оснований** — это фундаментальный философский вопрос о том, на чем держится мир и знание. [[Геофилософия\|Геофилософия]] часто приходит к выводу о **[[Кейс Геофилософия/3 Понятия/Безосновность (Грунд)\|Безосновность (Грунд)]] (Ungrund)**.
+**Проблема оснований** — это фундаментальный философский вопрос о том, на чем держится мир и знание. [[Геофилософия 1\|Геофилософия 1]] часто приходит к выводу о **[[Кейс Геофилософия/3 Понятия/Безосновность (Грунд)\|Безосновность (Грунд)]] (Ungrund)**.
 
 ## Основание vs. Обоснование
-- **[[Основание\|Основание]] (Grund)**: Это мифический, до-рациональный исток, принимаемый на веру.
-- **[[Обоснование\|Обоснование]] (Begründung)**: Это рациональная, философская попытка найти причины и доказательства.
+- **[[Кейс Геофилософия/3 Понятия/Основание\|Основание]] (Grund)**: Это мифический, до-рациональный исток, принимаемый на веру.
+- **[[Кейс Геофилософия/3 Понятия/Обоснование\|Обоснование]] (Begründung)**: Это рациональная, философская попытка найти причины и доказательства.
 
 ## Парадокс обоснования
 - Любая попытка **обоснования** в конечном счете упирается в нечто, что само не имеет оснований.
