--- a/src/site/notes/Кейс Геофилософия/3 Понятия/Атлас (как жанр).md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/Атлас (как жанр).md
@@ -4,7 +4,7 @@
 
 # Атлас (как жанр)
 
-**Атлас** — это не просто сборник карт, а особая форма знания и способ структурирования мира, который играет важную роль в [[Геофилософия\|геофилософии]].
+**Атлас** — это не просто сборник карт, а особая форма знания и способ структурирования мира, который играет важную роль в [[Геофилософия 1\|геофилософии]].
 
 ## Характеристики
 - **[[Карта как мировоззрение\|Карта как мировоззрение]]**: Атлас представляет мир как целостную систему, доступную для обозрения. [[Кейс Геофилософия/4 Авторы/Ортелий, Абрахам\|Абрахам Ортелий]] в своем атласе 1570 года представил мир как "театр", зрелище, которое можно обозреть целиком.
