--- a/src/site/notes/Кейс Геофилософия/3 Понятия/Безосновность (Грунд).md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/Безосновность (Грунд).md
@@ -4,11 +4,11 @@
 
 # Безосновность (Grund / Ungrund)
 
-**Безосновность (Ungrund)** — это центральное понятие в [[Кейс Геофилософия/2 Темы/Темные теории\|темной геофилософии]], описывающее фундаментальное отсутствие конечного, стабильного [[Основание\|основания]] у реальности, знания и бытия.
+**Безосновность (Ungrund)** — это центральное понятие в [[Кейс Геофилософия/2 Темы/Темные теории\|темной геофилософии]], описывающее фундаментальное отсутствие конечного, стабильного [[Кейс Геофилософия/3 Понятия/Основание\|основания]] у реальности, знания и бытия.
 
 ## Происхождение и смысл
 - **[[Кейс Геофилософия/4 Авторы/Шеллинг, Фридрих\|Шеллинг, Фридрих]]**: Понятие восходит к немецкой мистической традиции ([[Бёме, Якоб\|Бёме, Якоб]]) и было развито [[Кейс Геофилософия/4 Авторы/Шеллинг, Фридрих\|Шеллингом]]. Он говорил о **бездне (Ungrund)** как о темном, иррациональном, хаотическом начале, из которого рождается сам Бог и мир.
-- **Парадокс обоснования**: Любая попытка найти рациональное **[[Обоснование\|Обоснование]]** в конечном итоге упирается в нечто, что само не имеет оснований. Как сформулировано в лекции, **"безосновность есть основание обоснованного"**.
+- **Парадокс обоснования**: Любая попытка найти рациональное **[[Кейс Геофилософия/3 Понятия/Обоснование\|Обоснование]]** в конечном итоге упирается в нечто, что само не имеет оснований. Как сформулировано в лекции, **"безосновность есть основание обоснованного"**.
 
 ## Связь с геологией
 - **[[Кейс Геофилософия/3 Понятия/Геологическое как бессознательное\|Геологическое как бессознательное]]**: [[Кейс Геофилософия/4 Авторы/Вудард, Бен\|Вудард, Бен]] утверждает, что **[[геологическое\|геологическое]]** является главной метафорой безосновности.
