--- a/src/site/notes/Кейс Геофилософия/3 Понятия/Другая темпоральность.md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/Другая темпоральность.md
@@ -4,11 +4,11 @@
 
 # Другая темпоральность (Волнистая темпоральность)
 
-**Другая темпоральность** (или *волнистая темпоральность*) — это одна из пяти ключевых характеристик [[Гиперобъекты\|гиперобъектов]] в философии [[Кейс Геофилософия/4 Авторы/Мортон, Тимоти\|Тимоти Мортона]].
+**Другая темпоральность** (или *волнистая темпоральность*) — это одна из пяти ключевых характеристик [[Кейс Геофилософия/3 Понятия/Гиперобъекты\|гиперобъектов]] в философии [[Кейс Геофилософия/4 Авторы/Мортон, Тимоти\|Тимоти Мортона]].
 
 ## Определение
-- Это свойство [[Гиперобъекты\|гиперобъектов]] существовать во временных масштабах, которые радикально отличаются от человеческого восприятия времени и несоизмеримы с ним.
-- [[Гиперобъекты\|Гиперобъекты]] простираются так далеко в прошлое и будущее, что мы можем взаимодействовать только с их крошечным временным срезом.
+- Это свойство [[Кейс Геофилософия/3 Понятия/Гиперобъекты\|гиперобъектов]] существовать во временных масштабах, которые радикально отличаются от человеческого восприятия времени и несоизмеримы с ним.
+- [[Кейс Геофилософия/3 Понятия/Гиперобъекты\|Гиперобъекты]] простираются так далеко в прошлое и будущее, что мы можем взаимодействовать только с их крошечным временным срезом.
 
 ## Примеры из лекций
 - **Пластиковый пакет**: Время его разложения (сотни лет) — это для нас огромный срок, охватывающий несколько поколений, а для самого гиперобъекта "пластиковые отходы" — лишь мгновение в его жизненном цикле.
