--- a/src/site/notes/Кейс Геофилософия/3 Понятия/Жить в касании.md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/Жить в касании.md
@@ -12,5 +12,5 @@
 - **Риск и взаимное изменение**: Любой акт касания — это **риск**. В процессе касания обе стороны изменяются и становятся тем, что они есть. Нет заранее существующих сущностей, которые потом вступают в контакт; сущности формируются *внутри* этого контакта.
 
 ## Значение для геофилософии
-- **[[Практическая геофисофия\|Практическая геофисофия]]**: "Жить в касании" предлагается как одна из ключевых практик геофилософии.
+- **[[Кейс Геофилософия/2 Темы/Практическая геофилософия\|Кейс Геофилософия/2 Темы/Практическая геофилософия]]**: "Жить в касании" предлагается как одна из ключевых практик геофилософии.
 - **Этика ответственности**: Эта идея требует от нас признания нашей материальной запутанности с [[Кейс Геофилософия/3 Понятия/Земля\|Землей]] и ответственности за последствия наших "касаний". Мы не можем действовать так, как будто наши поступки не имеют реального влияния на мир, который, в свою очередь, влияет на нас.
