--- a/src/site/notes/Кейс Геофилософия/3 Понятия/Земля.md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/Земля.md
@@ -4,20 +4,20 @@
 
 # Земля
 
-**Земля** — центральное понятие [[Геофилософия\|геофилософии]]. В курсе она рассматривается не как единый объект, а как многогранный концепт, меняющийся в зависимости от философской перспективы.
+**Земля** — центральное понятие [[Геофилософия 1\|геофилософии]]. В курсе она рассматривается не как единый объект, а как многогранный концепт, меняющийся в зависимости от философской перспективы.
 
 ## Ключевые аспекты
 
-- **[[Кейс Геофилософия/3 Понятия/Земля vs Территория\|Земля vs Территория]] ([[Делёз, Жиль\|Делёз, Жиль]])**: Земля — это детерриторизирующая, хаотическая сила, противостоящая упорядоченной и кодированной [[Территория\|Территории]]. Это "Тело без органов", на котором разворачиваются потоки желания.
+- **[[Кейс Геофилософия/3 Понятия/Земля vs Территория\|Земля vs Территория]] ([[Кейс Геофилософия/4 Авторы/Делёз, Жиль\|Делёз, Жиль]])**: Земля — это детерриторизирующая, хаотическая сила, противостоящая упорядоченной и кодированной [[Кейс Геофилософия/3 Понятия/Территория\|Территории]]. Это "Тело без органов", на котором разворачиваются потоки желания.
 
 - **[[Кейс Геофилософия/3 Понятия/Гея vs Хтонь\|Гея vs Хтонь]] ([[Кейс Геофилософия/4 Авторы/Агамбен, Джорджо\|Агамбен, Джорджо]])**: Земля — это двойная реальность.
-    - **[[Гея\|Гея]]**: Живая, видимая, плодородная поверхность.
-    - **[[Хтонь\|Хтонь]]**: Темное, подземное, смертное основание, которое современность забыла.
+    - **[[Кейс Геофилософия/3 Понятия/Гея\|Гея]]**: Живая, видимая, плодородная поверхность.
+    - **[[Кейс Геофилософия/3 Понятия/Хтонь\|Хтонь]]**: Темное, подземное, смертное основание, которое современность забыла.
 
 - **[[Кейс Геофилософия/2 Темы/Политическая земля\|Политическая земля]] ([[Кейс Геофилософия/4 Авторы/Шмитт, Карл\|Шмитт, Карл]], [[Кейс Геофилософия/4 Авторы/Латур, Бруно\|Латур, Бруно]])**: Земля — это не просто арена для политики, а активный политический агент, [[Кейс Геофилософия/3 Понятия/Суверенитет\|суверен]], который сам устанавливает [[Кейс Геофилософия/3 Понятия/Чрезвычайное положение\|Чрезвычайное положение]] через катастрофы.
 
 - **[[Кейс Геофилософия/3 Понятия/Поврежденная земля\|Поврежденная земля]] ([[Кейс Геофилософия/4 Авторы/Харауэй, Донна\|Харауэй, Донна]])**: Земля в эпоху [[Кейс Геофилософия/3 Понятия/Антропоцен\|Антропоцен]] — это поврежденная, уязвимая среда, требующая не господства, а [[Кейс Геофилософия/2 Темы/Политики заботы\|политик заботы]].
 
-- **Феноменологическая Земля ([[Кейс Геофилософия/4 Авторы/Гуссерль, Эдмунд\|Гуссерль, Эдмунд]], [[Кейс Геофилософия/4 Авторы/Мерло-Понти, Морис\|Мерло-Понти, Морис]])**: Земля — это "[[Кейс Геофилософия/3 Понятия/Земля как первый ковчег\|Земля как первый ковчег]]", изначальное основание опыта, и "[[Плоть мира\|Плоть мира]]", гиперболизированная телесность.
+- **Феноменологическая Земля ([[Кейс Геофилософия/4 Авторы/Гуссерль, Эдмунд\|Гуссерль, Эдмунд]], [[Кейс Геофилософия/4 Авторы/Мерло-Понти, Морис\|Мерло-Понти, Морис]])**: Земля — это "[[Кейс Геофилософия/3 Понятия/Земля как первый ковчег\|Земля как первый ковчег]]", изначальное основание опыта, и "[[Кейс Геофилософия/3 Понятия/Плоть мира\|Плоть мира]]", гиперболизированная телесность.
 
 - **Безосновная Земля ([[Кейс Геофилософия/4 Авторы/Вудард, Бен\|Вудард, Бен]])**: Земля как воплощение [[Кейс Геофилософия/3 Понятия/Безосновность (Грунд)\|безосновности]], ее [[геологическое\|геологическое]] — это "бессознательное" нашего мира.
