--- a/src/site/notes/Кейс Геофилософия/3 Понятия/Ископаемая власть.md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/Ископаемая власть.md
@@ -12,5 +12,5 @@
 - **Культурное влияние**: Ископаемая власть формирует культурные идеалы. В [[Лекция 09 - Темная Земля (Агамбен и философия нефти)\|девятой лекции]] это иллюстрируется на примере **петро-маскулинности** — образа сильного мужчины-добытчика, который покоряет природу.
 
 ## Связь с [[Темная земля\|темной землей]]
-- **Власть из-под земли**: Ископаемая власть — это власть, буквально извлеченная из-под земли, из **[[Хтонь\|хтонических]]** глубин.
+- **Власть из-под земли**: Ископаемая власть — это власть, буквально извлеченная из-под земли, из **[[Кейс Геофилософия/3 Понятия/Хтонь\|хтонических]]** глубин.
 - Она представляет собой современную форму взаимодействия с [[Темная земля\|темной землей]], основанную на эксплуатации и подчинении, что, по мнению [[Кейс Геофилософия/4 Авторы/Агамбен, Джорджо\|Агамбена]], ведет к экологическому кризису.
