--- a/src/site/notes/Кейс Геофилософия/3 Понятия/Ландшафт.md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/Ландшафт.md
@@ -4,7 +4,7 @@
 
 # Ландшафт
 
-В [[Геофилософия\|геофилософии]], особенно в проекте "[[Кейс Геофилософия/2 Темы/Метафизика ландшафта\|Метафизика ландшафта]]" [[Кейс Геофилософия/4 Авторы/Подорога, Валерий\|Валерия Подороги]], **ландшафт** — это не просто пейзаж или географическое пространство, а сложный синтез материальных и мыслительных элементов.
+В [[Геофилософия 1\|геофилософии]], особенно в проекте "[[Кейс Геофилософия/2 Темы/Метафизика ландшафта\|Метафизика ландшафта]]" [[Кейс Геофилософия/4 Авторы/Подорога, Валерий\|Валерия Подороги]], **ландшафт** — это не просто пейзаж или географическое пространство, а сложный синтез материальных и мыслительных элементов.
 
 ## Состав ландшафта
 - **Физическая география**: Реальные места — горы, леса, города, моря.
