--- a/src/site/notes/Кейс Геофилософия/3 Понятия/Нелокальность.md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/Нелокальность.md
@@ -4,10 +4,10 @@
 
 # Нелокальность
 
-**Нелокальность** — это одна из пяти ключевых характеристик [[Гиперобъекты\|гиперобъектов]] в философии [[Кейс Геофилософия/4 Авторы/Мортон, Тимоти\|Тимоти Мортона]].
+**Нелокальность** — это одна из пяти ключевых характеристик [[Кейс Геофилософия/3 Понятия/Гиперобъекты\|гиперобъектов]] в философии [[Кейс Геофилософия/4 Авторы/Мортон, Тимоти\|Тимоти Мортона]].
 
 ## Определение
-- Нелокальность означает, что [[Гиперобъекты\|гиперобъект]] **не находится в каком-то одном конкретном месте**.
+- Нелокальность означает, что [[Кейс Геофилософия/3 Понятия/Гиперобъекты\|гиперобъект]] **не находится в каком-то одном конкретном месте**.
 - Любое локальное проявление гиперобъекта (например, конкретный ураган) — это не весь гиперобъект (глобальное потепление), а лишь его частичный эффект.
 - Гиперобъект настолько **масштабно распределен** по всей планете и за ее пределами, что его невозможно "собрать" в одной точке.
 
