--- a/src/site/notes/Кейс Геофилософия/3 Понятия/Ойкумена.md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/Ойкумена.md
@@ -8,7 +8,7 @@
 
 ## Характеристики
 - **Центр — Средиземное море**: Ойкумена была сосредоточена вокруг Средиземного моря, которое объединяло известные земли и служило главной артерией для торговли, войн и культурного обмена.
-- **Границы известного**: Ойкумена имела свои границы. За ее пределами начинались мифические, варварские или необитаемые земли. Например, [[Платон\|Платон]] называл [[Гибралтарский пролив\|Гибралтарский пролив]] "Геракловыми столпами" — символической границей обитаемого мира.
+- **Границы известного**: Ойкумена имела свои границы. За ее пределами начинались мифические, варварские или необитаемые земли. Например, [[Кейс Геофилософия/4 Авторы/Платон\|Платон]] называл [[Гибралтарский пролив\|Гибралтарский пролив]] "Геракловыми столпами" — символической границей обитаемого мира.
 - **Практическая картография**: В античности карты создавались в первую очередь для изображения **[[Кейс Геофилософия/3 Понятия/Ойкумена\|ойкумены]]**. [[Клавдий Птолемей\|Клавдий Птолемей]] в своей "Географии" предпринял попытку наиболее полно и точно нанести на карту весь известный на тот момент обитаемый мир.
 
 ## Значение
