--- a/src/site/notes/Кейс Геофилософия/3 Понятия/Ризома.md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/Ризома.md
@@ -4,10 +4,10 @@
 
 # Ризома
 
-**Ризома** — это один из центральных концептов в философии [[Делёз, Жиль\|Жиля Делёза]] и [[Кейс Геофилософия/4 Авторы/Гваттари, Феликс\|Феликса Гваттари]], представленный в книге "[[Тысяча плато\|Тысяча плато]]". Это модель для описания неиерархических, децентрированных систем.
+**Ризома** — это один из центральных концептов в философии [[Кейс Геофилософия/4 Авторы/Делёз, Жиль\|Жиля Делёза]] и [[Кейс Геофилософия/4 Авторы/Гваттари, Феликс\|Феликса Гваттари]], представленный в книге "[[Тысяча плато\|Тысяча плато]]". Это модель для описания неиерархических, децентрированных систем.
 
 ## Ризома vs. Дерево
-- **Древовидная модель**: Традиционная западная мысль, по [[Делёз, Жиль\|Делёзу]] и [[Кейс Геофилософия/4 Авторы/Гваттари, Феликс\|Гваттари]], организована по принципу дерева: есть корень (основание), ствол (центральная ось) и ветви (вторичные разделы). Это иерархическая, бинарная структура.
+- **Древовидная модель**: Традиционная западная мысль, по [[Кейс Геофилософия/4 Авторы/Делёз, Жиль\|Делёзу]] и [[Кейс Геофилософия/4 Авторы/Гваттари, Феликс\|Гваттари]], организована по принципу дерева: есть корень (основание), ствол (центральная ось) и ветви (вторичные разделы). Это иерархическая, бинарная структура.
 - **Ризоматическая модель**: [[Кейс Геофилософия/3 Понятия/Ризома\|Ризома]] (в ботанике — корневище, как у имбиря или пырея) не имеет центрального корня. Она растет **горизонтально, под землей**, и любая ее точка может соединиться с любой другой. Это модель множественности, где нет иерархии и предопределенного порядка.
 
 ## Принципы ризомы
@@ -17,5 +17,5 @@
 4.  **Картография, а не калька**: Ризому нужно картографировать (исследовать ее открытые связи), а не калькировать (копировать ее структуру).
 
 ## Значение для геофилософии
-- [[Кейс Геофилософия/3 Понятия/Ризома\|Ризома]] — это **геофилософская метафора по своей сути**. Она описывает [[Кейс Геофилософия/3 Понятия/Земля\|Землю]] не как структурированную [[Территория\|территорию]], а как поле чистых имманентных связей.
+- [[Кейс Геофилософия/3 Понятия/Ризома\|Ризома]] — это **геофилософская метафора по своей сути**. Она описывает [[Кейс Геофилософия/3 Понятия/Земля\|Землю]] не как структурированную [[Кейс Геофилософия/3 Понятия/Территория\|территорию]], а как поле чистых имманентных связей.
 - Она предлагает способ мыслить **[[Кейс Геофилософия/2 Темы/Множественность (миров, природ, земель)\|Множественность (миров, природ, земель)]]** и избегать иерархических, дуалистических моделей.
