--- a/src/site/notes/Кейс Геофилософия/3 Понятия/Тело без органов.md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/Тело без органов.md
@@ -4,7 +4,7 @@
 
 # Тело без органов (ТБО)
 
-**Тело без органов (Corps sans Organes)** — один из самых известных и сложных концептов [[Делёз, Жиль\|Жиля Делёза]] и [[Кейс Геофилософия/4 Авторы/Гваттари, Феликс\|Феликса Гваттари]], введенный в книге "[[Анти-Эдип\|Анти-Эдип]]".
+**Тело без органов (Corps sans Organes)** — один из самых известных и сложных концептов [[Кейс Геофилософия/4 Авторы/Делёз, Жиль\|Жиля Делёза]] и [[Кейс Геофилософия/4 Авторы/Гваттари, Феликс\|Феликса Гваттари]], введенный в книге "[[Анти-Эдип\|Анти-Эдип]]".
 
 ## Определение
 - **Это не тело без органов в буквальном смысле**. Это не труп и не тело без частей.
@@ -16,5 +16,5 @@
 
 ## Связь с геофилософией
 - **[[Кейс Геофилософия/3 Понятия/Земля\|Земля]] как Тело без органов**: В "[[Анти-Эдип\|Анти-Эдипе]]" [[Кейс Геофилософия/3 Понятия/Земля\|Земля]] напрямую называется **изначальным Телом без органов**. Это первоначальная, недифференцированная поверхность, на которой записываются все социальные коды.
-- **Детерриторизация**: Движение к ТБО — это всегда процесс **[[Детерриторизация и Ретерриторизация\|детерриторизации]]**.
+- **Детерриторизация**: Движение к ТБО — это всегда процесс **[[Кейс Геофилософия/3 Понятия/Детерриторизация и Ретерриторизация\|детерриторизации]]**.
 - **[[Геологическое\|Геологическое]]**: ТБО — это геологическое, до-органическое поле, которое лежит в основе всего живого.
