--- a/src/site/notes/Кейс Геофилософия/3 Понятия/Темная экология.md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/Темная экология.md
@@ -12,6 +12,6 @@
 - **[[Кейс Геофилософия/3 Понятия/Вязкость\|Вязкость]]**: Мы "вязнем" в экологических проблемах. Нет безопасной дистанции, из которой можно было бы наблюдать за катастрофой. Мы уже внутри нее.
 - **Осознание вины**: Темная экология включает в себя осознание нашей коллективной вины и сопричастности к разрушению планеты.
 
-## Связь с [[Гиперобъекты\|гиперобъектами]]
-- Темная экология — это мышление в мире **[[Гиперобъекты\|гиперобъектов]]**.
+## Связь с [[Кейс Геофилософия/3 Понятия/Гиперобъекты\|гиперобъектами]]
+- Темная экология — это мышление в мире **[[Кейс Геофилософия/3 Понятия/Гиперобъекты\|гиперобъектов]]**.
 - Экологическое осознание — это осознание того, что мы окружены этими странными, нелокальными и темпорально растянутыми сущностями (как глобальное потепление), которые мы не можем контролировать.
