--- a/src/site/notes/Кейс Геофилософия/3 Понятия/Теория Геи.md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/Теория Геи.md
@@ -8,7 +8,7 @@
 
 ## Суть теории
 - **[[Кейс Геофилософия/3 Понятия/Земля\|Земля]] как сверх-организм**: Теория предполагает, что [[Кейс Геофилософия/3 Понятия/Земля\|Земля]] в целом — биосфера, атмосфера, океаны и почвы — представляет собой единую, сложную, саморегулирующуюся систему.
-- **Поддержание жизни**: Эта система ([[Гея\|Гея]]) активно поддерживает и сохраняет условия на планете, пригодные для жизни. Это форма планетарного гомеостаза.
+- **Поддержание жизни**: Эта система ([[Кейс Геофилософия/3 Понятия/Гея\|Гея]]) активно поддерживает и сохраняет условия на планете, пригодные для жизни. Это форма планетарного гомеостаза.
 - **[[Кейс Геофилософия/3 Понятия/Маргаритковый мир\|Маргаритковый мир]]**: Знаменитая умозрительная модель Лавлока, которая иллюстрирует этот принцип. На воображаемой планете черные маргаритки (поглощающие тепло) и белые маргаритки (отражающие тепло) совместно регулируют глобальную температуру, не имея при этом сознательной цели.
 - **[[Кейс Геофилософия/3 Понятия/Эмерджентный эффект\|Эмерджентный эффект]]**: Способность к саморегуляции — это свойство системы в целом, а не ее отдельных частей.
 
