--- a/src/site/notes/Кейс Геофилософия/3 Понятия/Теория Медеи.md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/Теория Медеи.md
@@ -7,7 +7,7 @@
 **Теория Медеи** — это научная гипотеза, предложенная палеонтологом Питером Уордом как прямая альтернатива и критика **[[Кейс Геофилософия/3 Понятия/Теория Геи\|теории Геи]]** [[Кейс Геофилософия/4 Авторы/Лавлок, Джеймс\|Джеймса Лавлока]].
 
 ## Суть гипотезы
-- **[[Кейс Геофилософия/3 Понятия/Земля\|Земля]] как самоубийца**: В отличие от [[Гея\|Геи]], которая рассматривается как заботливая "мать", поддерживающая жизнь, Медея (названная в честь мифологической героини, убившей своих детей) — это планета, которая периодически **стремится к самоуничтожению**.
+- **[[Кейс Геофилософия/3 Понятия/Земля\|Земля]] как самоубийца**: В отличие от [[Кейс Геофилософия/3 Понятия/Гея\|Геи]], которая рассматривается как заботливая "мать", поддерживающая жизнь, Медея (названная в честь мифологической героини, убившей своих детей) — это планета, которая периодически **стремится к самоуничтожению**.
 - **Жизнь против жизни**: Уорд утверждает, что жизнь на [[Кейс Геофилософия/3 Понятия/Земля\|Земле]] не поддерживает гомеостаз, а, наоборот, регулярно вызывает глобальные катастрофы, ведущие к массовым вымираниям.
 - **Примеры "самоубийственных" актов жизни**:
     - **Кислородная катастрофа**: Появление фотосинтезирующих цианобактерий привело к резкому увеличению кислорода в атмосфере, что было ядом для большинства тогдашних анаэробных организмов и вызвало массовое вымирание.
