--- a/src/site/notes/Кейс Геофилософия/3 Понятия/Трансцендентальная Земля.md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/Трансцендентальная Земля.md
@@ -15,4 +15,4 @@
 - **Геометрия vs. Геология**:
     - **Геометрия** возможна как объективная наука, потому что она имеет дело с идеальными, овнешненными через письмо объектами.
     - **Геология** (в философском смысле, как наука о самой [[Кейс Геофилософия/3 Понятия/Земля\|Земле]]) как объективная наука **радикально невозможна**, потому что [[Кейс Геофилософия/3 Понятия/Земля\|Земля]] — это не объект, а основание для всех объектов.
-- **Связь с [[Трансцендентальная геология\|трансцендентальной геологией]]**: Эта идея перекликается с [[Трансцендентальная геология\|трансцендентальной геологией]] [[Кейс Геофилософия/4 Авторы/Мерло-Понти, Морис\|Мерло-Понти]], где [[Кейс Геофилософия/3 Понятия/Земля\|Земля]] также выступает как невидимое основание всего видимого.
+- **Связь с [[Кейс Геофилософия/3 Понятия/Трансцендентальная геология\|трансцендентальной геологией]]**: Эта идея перекликается с [[Кейс Геофилософия/3 Понятия/Трансцендентальная геология\|трансцендентальной геологией]] [[Кейс Геофилософия/4 Авторы/Мерло-Понти, Морис\|Мерло-Понти]], где [[Кейс Геофилософия/3 Понятия/Земля\|Земля]] также выступает как невидимое основание всего видимого.
