--- a/src/site/notes/Кейс Геофилософия/3 Понятия/Фазирование.md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/Фазирование.md
@@ -4,10 +4,10 @@
 
 # Фазирование
 
-**Фазирование** — это одна из пяти ключевых характеристик [[Гиперобъекты\|гиперобъектов]] в философии [[Кейс Геофилософия/4 Авторы/Мортон, Тимоти\|Тимоти Мортона]].
+**Фазирование** — это одна из пяти ключевых характеристик [[Кейс Геофилософия/3 Понятия/Гиперобъекты\|гиперобъектов]] в философии [[Кейс Геофилософия/4 Авторы/Мортон, Тимоти\|Тимоти Мортона]].
 
 ## Определение
-- Фазирование означает, что [[Гиперобъекты\|гиперобъект]] проявляется в нашем мире только через свои **локальные "фазы" или срезы**.
+- Фазирование означает, что [[Кейс Геофилософия/3 Понятия/Гиперобъекты\|гиперобъект]] проявляется в нашем мире только через свои **локальные "фазы" или срезы**.
 - Мы никогда не можем воспринять гиперобъект **целиком**, во всей его полноте. Нам доступны лишь его частичные проявления.
 
 ## Примеры
