--- a/src/site/notes/Кейс Геофилософия/3 Понятия/Феноменология как археология.md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/Феноменология как археология.md
@@ -11,6 +11,6 @@
 - **Цель**: Цель этих "раскопок" — добраться до самых **изначальных, до-рефлексивных, телесных структур** нашего бытия-в-мире, которые скрыты под более поздними слоями языка, культуры и научных теорий.
 - **[[Кейс Геофилософия/3 Понятия/Оседание опыта\|Оседание опыта]]**: Эти слои опыта формируются в результате **"[[Кейс Геофилософия/3 Понятия/Оседание опыта\|оседания]]"** — медленного накопления личной, исторической и даже геологической "памяти" в нашем телесном восприятии.
 
-## Связь с [[Трансцендентальная геология\|трансцендентальной геологией]]
-- Этот археологический метод является центральным для проекта **[[Трансцендентальная геология\|трансцендентальной геологии]]**.
-- "Раскапывая" свой опыт, феноменолог в конечном итоге добирается до самого фундаментального слоя — до **[[Плоть мира\|плоти мира]]**, до нашего изначального соприкосновения с **[[Кейс Геофилософия/3 Понятия/Земля\|Землей]]**.
+## Связь с [[Кейс Геофилософия/3 Понятия/Трансцендентальная геология\|трансцендентальной геологией]]
+- Этот археологический метод является центральным для проекта **[[Кейс Геофилософия/3 Понятия/Трансцендентальная геология\|трансцендентальной геологии]]**.
+- "Раскапывая" свой опыт, феноменолог в конечном итоге добирается до самого фундаментального слоя — до **[[Кейс Геофилософия/3 Понятия/Плоть мира\|плоти мира]]**, до нашего изначального соприкосновения с **[[Кейс Геофилософия/3 Понятия/Земля\|Землей]]**.
