--- a/src/site/notes/Кейс Геофилософия/3 Понятия/Хтулхуцен.md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/Хтулхуцен.md
@@ -7,7 +7,7 @@
 **Хтулхуцен (Chthulucene)** — это термин, предложенный [[Кейс Геофилософия/4 Авторы/Харауэй, Донна\|Донной Харауэй]] в книге "[[Кейс Геофилософия/5 Источники/Книга - Оставаясь со смутой (Харауэй)\|Книга - Оставаясь со смутой (Харауэй)]]" в качестве альтернативы терминам [[Кейс Геофилософия/3 Понятия/Антропоцен\|Антропоцен]] и Капиталоцен.
 
 ## Происхождение названия
-- Название происходит не от Ктулху [[Лавкрафт, Говард\|Говарда Лавкрафта]] (которого [[Кейс Геофилософия/4 Авторы/Харауэй, Донна\|Харауэй]] критикует), а от греческого корня **"хтон" (khthon)**, означающего "земля", "почва".
+- Название происходит не от Ктулху [[Кейс Геофилософия/4 Авторы/Лавкрафт, Говард\|Говарда Лавкрафта]] (которого [[Кейс Геофилософия/4 Авторы/Харауэй, Донна\|Харауэй]] критикует), а от греческого корня **"хтон" (khthon)**, означающего "земля", "почва".
 - [[Кейс Геофилософия/3 Понятия/Хтулхуцен\|Хтулхуцен]] — это эпоха **хтонических, земных, подземных существ** и сил.
 
 ## Определение
