--- a/src/site/notes/Кейс Геофилософия/3 Понятия/Шизоанализ.md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/Шизоанализ.md
@@ -4,16 +4,16 @@
 
 # Шизоанализ
 
-**Шизоанализ** — это критическая и практическая теория, разработанная [[Делёз, Жиль\|Жилем Делёзом]] и [[Кейс Геофилософия/4 Авторы/Гваттари, Феликс\|Феликсом Гваттари]] в книге "[[Анти-Эдип\|Анти-Эдип]]". Он выступает как альтернатива и критика традиционного психоанализа.
+**Шизоанализ** — это критическая и практическая теория, разработанная [[Кейс Геофилософия/4 Авторы/Делёз, Жиль\|Жилем Делёзом]] и [[Кейс Геофилософия/4 Авторы/Гваттари, Феликс\|Феликсом Гваттари]] в книге "[[Анти-Эдип\|Анти-Эдип]]". Он выступает как альтернатива и критика традиционного психоанализа.
 
 ## Шизоанализ vs. Психоанализ
-- **Критика психоанализа**: [[Делёз, Жиль\|Делёз]] и [[Кейс Геофилософия/4 Авторы/Гваттари, Феликс\|Гваттари]] утверждают, что психоанализ **репрессивен**, поскольку он сводит безграничное поле желания к ограниченной "сцене" семьи (Эдипов треугольник: папа-мама-я).
+- **Критика психоанализа**: [[Кейс Геофилософия/4 Авторы/Делёз, Жиль\|Делёз]] и [[Кейс Геофилософия/4 Авторы/Гваттари, Феликс\|Гваттари]] утверждают, что психоанализ **репрессивен**, поскольку он сводит безграничное поле желания к ограниченной "сцене" семьи (Эдипов треугольник: папа-мама-я).
 - **Безсознательное как фабрика**: Шизоанализ рассматривает бессознательное не как "театр" (где разыгрываются семейные драмы), а как **"фабрику"**. Это производственная сила, которая постоянно создает "машины желания", выходящие далеко за пределы семьи.
 
 ## Цели и задачи
 - **Освобождение желания**: Главная задача шизоанализа — **освободить желание** от кодов и ограничений, наложенных семьей, государством и капитализмом.
-- **Картографирование линий ускользания**: Вместо того чтобы интерпретировать, шизоанализ стремится **картографировать** линии [[Детерриторизация и Ретерриторизация\|детерриторизации]] и ускользания.
+- **Картографирование линий ускользания**: Вместо того чтобы интерпретировать, шизоанализ стремится **картографировать** линии [[Кейс Геофилософия/3 Понятия/Детерриторизация и Ретерриторизация\|детерриторизации]] и ускользания.
 
 ## Связь с геофилософией
-- **"Прогулка шизофреника"**: Эта фигура важна для шизоанализа. "Прогулка шизофреника" — это **практика [[Детерриторизация и Ретерриторизация\|детерриторизации]]**, создания новой [[Кейс Геофилософия/3 Понятия/Земля\|Земли]] и новой географии с каждым шагом.
-- **Бред о мире**: [[Делёз, Жиль\|Делёз]] и [[Кейс Геофилософия/4 Авторы/Гваттари, Феликс\|Гваттари]] утверждают, что бессознательное "бредит" не о семье, а о **мире** — о расах, племенах, континентах, истории. Шизоанализ — это геополитика бессознательного, а значит, и **[[Геофилософия\|геофилософия]]**.
+- **"Прогулка шизофреника"**: Эта фигура важна для шизоанализа. "Прогулка шизофреника" — это **практика [[Кейс Геофилософия/3 Понятия/Детерриторизация и Ретерриторизация\|детерриторизации]]**, создания новой [[Кейс Геофилософия/3 Понятия/Земля\|Земли]] и новой географии с каждым шагом.
+- **Бред о мире**: [[Кейс Геофилософия/4 Авторы/Делёз, Жиль\|Делёз]] и [[Кейс Геофилософия/4 Авторы/Гваттари, Феликс\|Гваттари]] утверждают, что бессознательное "бредит" не о семье, а о **мире** — о расах, племенах, континентах, истории. Шизоанализ — это геополитика бессознательного, а значит, и **[[Геофилософия 1\|Геофилософия 1]]**.
