--- a/src/site/notes/Кейс Геофилософия/3 Понятия/Эмерджентный эффект.md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/Эмерджентный эффект.md
@@ -11,7 +11,7 @@
 - **Пример**: Сознание. Отдельные нейроны не обладают сознанием, но их сложное взаимодействие в мозге порождает (эмерджентно) феномен сознания. Другой пример — мокрый асфальт. Ни одна молекула воды не является "мокрой", но их совокупность создает это свойство.
 
 ## Связь с [[Кейс Геофилософия/3 Понятия/Теория Геи\|Теория Геи]]
-- **[[Гея\|Гея]] как эмерджентное свойство**: [[Кейс Геофилософия/4 Авторы/Лавлок, Джеймс\|Джеймс Лавлок]] использует эту идею для объяснения [[Кейс Геофилософия/3 Понятия/Теория Геи\|теории Геи]].
+- **[[Кейс Геофилософия/3 Понятия/Гея\|Гея]] как эмерджентное свойство**: [[Кейс Геофилософия/4 Авторы/Лавлок, Джеймс\|Джеймс Лавлок]] использует эту идею для объяснения [[Кейс Геофилософия/3 Понятия/Теория Геи\|теории Геи]].
 - Отдельные организмы (например, маргаритки в модели [[Кейс Геофилософия/3 Понятия/Маргаритковый мир\|Маргаритковый мир]]) не обладают способностью регулировать климат планеты.
 - Однако их **коллективное взаимодействие** в рамках всей биосферы порождает **эмерджентное свойство** — способность системы к саморегуляции и поддержанию гомеостаза.
-- [[Гея\|Гея]] — это не какая-то мистическая сущность, а эмерджентный эффект сложной системы взаимодействий на [[Кейс Геофилософия/3 Понятия/Земля\|Земле]].
+- [[Кейс Геофилософия/3 Понятия/Гея\|Гея]] — это не какая-то мистическая сущность, а эмерджентный эффект сложной системы взаимодействий на [[Кейс Геофилософия/3 Понятия/Земля\|Земле]].
