--- a/src/site/notes/Кейс Геофилософия/4 Авторы/0 Индекс — Авторы.md
+++ b/src/site/notes/Кейс Геофилософия/4 Авторы/0 Индекс — Авторы.md
@@ -4,7 +4,7 @@
 
 # Авторы
 
-Здесь собраны заметки о философах, ученых и исследователях, чьи идеи обсуждались в курсе по [[Геофилософия\|геофилософии]].
+Здесь собраны заметки о философах, ученых и исследователях, чьи идеи обсуждались в курсе по [[Геофилософия 1\|геофилософии]].
 
 - [[Кейс Геофилософия/4 Авторы/Агамбен, Джорджо\|Агамбен, Джорджо]]
 - [[Кейс Геофилософия/4 Авторы/Аристотель\|Аристотель]]
@@ -18,10 +18,10 @@
 - [[Кейс Геофилософия/4 Авторы/Гваттари, Феликс\|Гваттари, Феликс]]
 - [[Кейс Геофилософия/4 Авторы/Гуссерль, Эдмунд\|Гуссерль, Эдмунд]]
 - [[Кейс Геофилософия/4 Авторы/Декарт, Рене\|Декарт, Рене]]
-- [[Делёз, Жиль\|Делёз, Жиль]]
+- [[Кейс Геофилософия/4 Авторы/Делёз, Жиль\|Делёз, Жиль]]
 - [[Кейс Геофилософия/4 Авторы/Деррида, Жак\|Деррида, Жак]]
 - [[Кейс Геофилософия/4 Авторы/Кант, Иммануил\|Кант, Иммануил]]
-- [[Кьеркегор, Сёрен\|Кьеркегор, Сёрен]]
+- [[Кейс Геофилософия/4 Авторы/Кьеркегор, Сёрен\|Кьеркегор, Сёрен]]
 - [[Кейс Геофилософия/4 Авторы/Лавкрафт, Говард\|Лавкрафт, Говард]]
 - [[Кейс Геофилософия/4 Авторы/Лавлок, Джеймс\|Лавлок, Джеймс]]
 - [[Кейс Геофилософия/4 Авторы/Латур, Бруно\|Латур, Бруно]]
@@ -31,7 +31,7 @@
 - [[Кейс Геофилософия/4 Авторы/Мортон, Тимоти\|Мортон, Тимоти]]
 - [[Кейс Геофилософия/4 Авторы/Ницше, Фридрих\|Ницше, Фридрих]]
 - [[Кейс Геофилософия/4 Авторы/Ортелий, Абрахам\|Ортелий, Абрахам]]
-- [[Платон\|Платон]]
+- [[Кейс Геофилософия/4 Авторы/Платон\|Платон]]
 - [[Кейс Геофилософия/4 Авторы/Подорога, Валерий\|Подорога, Валерий]]
 - [[Кейс Геофилософия/4 Авторы/Птолемей, Клавдий\|Птолемей, Клавдий]]
 - [[Такер, Юджин\|Такер, Юджин]]
