--- a/src/site/notes/Кейс Геофилософия/4 Авторы/Аристотель.md
+++ b/src/site/notes/Кейс Геофилософия/4 Авторы/Аристотель.md
@@ -4,8 +4,8 @@
 
 # Аристотель
 
-Древнегреческий философ, ученик [[Платон\|Платона]].
+Древнегреческий философ, ученик [[Кейс Геофилософия/4 Авторы/Платон\|Платона]].
 
 ## Упоминания в курсе
-- **Предшественник**: Упоминается как один из ключевых античных авторов, писавших трактаты "О природе", что делает его одним из далеких предшественников [[Геофилософия\|геофилософии]].
+- **Предшественник**: Упоминается как один из ключевых античных авторов, писавших трактаты "О природе", что делает его одним из далеких предшественников [[Геофилософия 1\|геофилософии]].
 - **Критика**: В [[Лекция 09 - Темная Земля (Агамбен и философия нефти)\|девятой лекции]] его модель, где активная **форма** подчиняет пассивную **материю**, приводится как философское основание для **петро-маскулинности** — идеологии покорения "пассивной" земли-материи.
