--- a/src/site/notes/Кейс Геофилософия/4 Авторы/Бродель, Фернан.md
+++ b/src/site/notes/Кейс Геофилософия/4 Авторы/Бродель, Фернан.md
@@ -7,5 +7,5 @@
 Французский историк, представитель школы "Анналов".
 
 ## Упоминания в курсе
-- В [[Кейс Геофилософия/1 Лекции/Лекция 01 - Введение. Когда закончилась Земля\|первой лекции]] он назван одним из предшественников [[Геофилософия\|геофилософии]] и [[Кейс Геофилософия/3 Понятия/Геоистория\|геоистории]].
-- Его новаторство заключалось в том, что он начал систематически учитывать **географические и климатические факторы** (историю "большой длительности") при анализе исторических событий, тем самым рассматривая [[Кейс Геофилософия/3 Понятия/Земля\|Землю]] как активную историческую силу. [[Делёз, Жиль\|Делёз, Жиль]] и [[Кейс Геофилософия/4 Авторы/Гваттари, Феликс\|Гваттари, Феликс]] признавали его влияние.
+- В [[Кейс Геофилософия/1 Лекции/Лекция 01 - Введение. Когда закончилась Земля\|первой лекции]] он назван одним из предшественников [[Геофилософия 1\|геофилософии]] и [[Кейс Геофилософия/3 Понятия/Геоистория\|геоистории]].
+- Его новаторство заключалось в том, что он начал систематически учитывать **географические и климатические факторы** (историю "большой длительности") при анализе исторических событий, тем самым рассматривая [[Кейс Геофилософия/3 Понятия/Земля\|Землю]] как активную историческую силу. [[Кейс Геофилософия/4 Авторы/Делёз, Жиль\|Делёз, Жиль]] и [[Кейс Геофилософия/4 Авторы/Гваттари, Феликс\|Гваттари, Феликс]] признавали его влияние.
