--- a/src/site/notes/Кейс Геофилософия/4 Авторы/Гваттари, Феликс.md
+++ b/src/site/notes/Кейс Геофилософия/4 Авторы/Гваттари, Феликс.md
@@ -4,11 +4,11 @@
 
 # Гваттари, Феликс
 
-Французский психоаналитик (ученик [[Лакан, Жак\|Лакана]]), политический активист и философ. Вместе с [[Делёз, Жиль\|Жилем Делёзом]] является автором ключевых работ по [[Геофилософия\|геофилософии]] и создателем самого термина.
+Французский психоаналитик (ученик [[Лакан, Жак\|Лакана]]), политический активист и философ. Вместе с [[Кейс Геофилософия/4 Авторы/Делёз, Жиль\|Жилем Делёзом]] является автором ключевых работ по [[Геофилософия 1\|геофилософии]] и создателем самого термина.
 
 ## Вклад в геофилософию
-- **Соавторство**: Внес в совместный с [[Делёз, Жиль\|Делёзом]] проект практический, политический и психоаналитический (шизоаналитический) измерения.
-- **[[Кейс Геофилософия/3 Понятия/Шизоанализ\|Шизоанализ]]**: Его концепция шизоанализа, противопоставленная психоанализу, напрямую связана с [[Геофилософия\|геофилософией]]. "Прогулка шизофреника" — это акт **[[Детерриторизация и Ретерриторизация\|детерриторизации]]** пространства.
-- **Ключевые концепты**: Является соавтором всех центральных геофилософских концептов: [[Кейс Геофилософия/3 Понятия/Земля vs Территория\|Земля vs Территория]], [[Детерриторизация и Ретерриторизация\|Детерриторизация]], [[Кейс Геофилософия/3 Понятия/Ризома\|Ризома]], [[Кейс Геофилософия/3 Понятия/Ритурнель\|Ритурнель]], [[Кейс Геофилософия/3 Понятия/Номадизм\|Номадизм]].
+- **Соавторство**: Внес в совместный с [[Кейс Геофилософия/4 Авторы/Делёз, Жиль\|Делёзом]] проект практический, политический и психоаналитический (шизоаналитический) измерения.
+- **[[Кейс Геофилософия/3 Понятия/Шизоанализ\|Шизоанализ]]**: Его концепция шизоанализа, противопоставленная психоанализу, напрямую связана с [[Геофилософия 1\|геофилософией]]. "Прогулка шизофреника" — это акт **[[Кейс Геофилософия/3 Понятия/Детерриторизация и Ретерриторизация\|детерриторизации]]** пространства.
+- **Ключевые концепты**: Является соавтором всех центральных геофилософских концептов: [[Кейс Геофилософия/3 Понятия/Земля vs Территория\|Земля vs Территория]], [[Кейс Геофилософия/3 Понятия/Детерриторизация и Ретерриторизация\|Детерриторизация]], [[Кейс Геофилософия/3 Понятия/Ризома\|Ризома]], [[Кейс Геофилософия/3 Понятия/Ритурнель\|Ритурнель]], [[Кейс Геофилософия/3 Понятия/Номадизм\|Номадизм]].
 
 
