--- a/src/site/notes/Кейс Геофилософия/4 Авторы/Мерло-Понти, Морис.md
+++ b/src/site/notes/Кейс Геофилософия/4 Авторы/Мерло-Понти, Морис.md
@@ -7,8 +7,8 @@
 Французский философ-феноменолог, чьи поздние работы являются ключевыми для [[Кейс Геофилософия/2 Темы/Геофеноменология\|геофеноменологии]].
 
 ## Вклад в геофилософию
-- **[[Плоть мира\|Плоть мира]]**: Это его центральное понятие. Мир и наше тело сделаны из одной "стихийной" ткани — плоти. [[Кейс Геофилософия/3 Понятия/Земля\|Земля]] является предельным выражением этой плоти, **гиперболизированной телесностью**.
-- **[[Трансцендентальная геология\|Трансцендентальная геология]]**: В своих неопубликованных при жизни заметках Мерло-Понти наметил проект "трансцендентальной геологии".
+- **[[Кейс Геофилософия/3 Понятия/Плоть мира\|Плоть мира]]**: Это его центральное понятие. Мир и наше тело сделаны из одной "стихийной" ткани — плоти. [[Кейс Геофилософия/3 Понятия/Земля\|Земля]] является предельным выражением этой плоти, **гиперболизированной телесностью**.
+- **[[Кейс Геофилософия/3 Понятия/Трансцендентальная геология\|Трансцендентальная геология]]**: В своих неопубликованных при жизни заметках Мерло-Понти наметил проект "трансцендентальной геологии".
     - **[[Кейс Геофилософия/3 Понятия/Феноменология как археология\|Феноменология как археология]]**: Он предложил исследовать "слои" опыта, подобно тому как геологи исследуют слои земли.
     - **[[Кейс Геофилософия/3 Понятия/Оседание опыта\|Оседание опыта]]**: Глобальный геологический опыт [[Кейс Геофилософия/3 Понятия/Земля\|Земли]] (ее [[Кейс Геофилософия/3 Понятия/Глубинное время (Deep Time)\|Глубинное время (Deep Time)]], ее "плотская про-история") "оседает" во множестве локальных, телесных опытов.
 - **Невидимое**: [[Кейс Геофилософия/3 Понятия/Земля\|Земля]] для Мерло-Понти — это "невидимая сила, позволяющая быть всему видимому".
