--- a/src/site/notes/Кейс Геофилософия/4 Авторы/Мортон, Тимоти.md
+++ b/src/site/notes/Кейс Геофилософия/4 Авторы/Мортон, Тимоти.md
@@ -7,6 +7,6 @@
 Британский философ и литературовед, связанный с [[Объектно-ориентированная онтология\|объектно-ориентированной онтологией]] и [[Кейс Геофилософия/2 Темы/Темные теории\|темными теориями]].
 
 ## Вклад в геофилософию
-- **[[Гиперобъекты\|Гиперобъекты]]**: Его самый известный концепт. Гиперобъекты — это сущности (глобальное потепление, пластик, интернет), которые настолько распределены во времени и пространстве, что мы не можем их воспринять целиком, но постоянно находимся внутри них.
+- **[[Кейс Геофилософия/3 Понятия/Гиперобъекты\|Гиперобъекты]]**: Его самый известный концепт. Гиперобъекты — это сущности (глобальное потепление, пластик, интернет), которые настолько распределены во времени и пространстве, что мы не можем их воспринять целиком, но постоянно находимся внутри них.
 - **[[Кейс Геофилософия/3 Понятия/Темная экология\|Темная экология]]**: Мортон предлагает "экологию без Природы". Он утверждает, что само понятие "Природы" как чего-то чистого и отдельного от нас — это идеологический конструкт.
 - **Философия после конца мира**: Утверждает, что "мир" как универсальное, всеобъемлющее понятие закончился. Философия сегодня должна работать в условиях этой потери, избавляя нас от навязчивых вопросов о "смысле пребывания в мире".
