--- a/src/site/notes/Кейс Геофилософия/4 Авторы/Шмитт, Карл.md
+++ b/src/site/notes/Кейс Геофилософия/4 Авторы/Шмитт, Карл.md
@@ -7,8 +7,8 @@
 Немецкий юрист, политический философ и теоретик государства.
 
 ## Вклад в геофилософию
-- **[[Номос земли\|Номос земли]]**: Его ключевая работа, в которой он вводит понятие **номоса** — изначального пространственного разделения мира, лежащего в основе права и политики.
+- **[[Кейс Геофилософия/3 Понятия/Номос земли\|Номос земли]]**: Его ключевая работа, в которой он вводит понятие **номоса** — изначального пространственного разделения мира, лежащего в основе права и политики.
 - **[[Кейс Геофилософия/2 Темы/Политическая земля\|Политическая земля]]**: Концепция номоса позволяет мыслить [[Кейс Геофилософия/3 Понятия/Земля\|Землю]] как политическую сущность.
 - **Оппозиция Море vs. Суша**: Шмитт строит свою геополитику на фундаментальном различии между упорядоченной сушей и свободным, анархичным морем.
 - **[[Кейс Геофилософия/3 Понятия/Суверенитет\|Суверенитет]] и [[Кейс Геофилософия/3 Понятия/Чрезвычайное положение\|Чрезвычайное положение]]**: Его ранние идеи о том, что "суверен тот, кто принимает решение о чрезвычайном положении", используются в [[Лекция 08 - Политическая Земля (Шмитт и Латур)\|восьмой лекции]] для того, чтобы помыслить [[Кейс Геофилософия/3 Понятия/Земля\|Землю]] как автономного суверена.
-- **Влияние на [[Кейс Геофилософия/4 Авторы/Латур, Бруно\|Латура]]**: [[Кейс Геофилософия/4 Авторы/Латур, Бруно\|Латур]] активно использует и переосмысляет идеи Шмитта для разработки своей концепции договора с [[Гея\|Геей]].
+- **Влияние на [[Кейс Геофилософия/4 Авторы/Латур, Бруно\|Латура]]**: [[Кейс Геофилософия/4 Авторы/Латур, Бруно\|Латур]] активно использует и переосмысляет идеи Шмитта для разработки своей концепции договора с [[Кейс Геофилософия/3 Понятия/Гея\|Геей]].
