--- a/src/site/notes/Кейс Геофилософия/5 Источники/0 Индекс – Источники.md
+++ b/src/site/notes/Кейс Геофилософия/5 Источники/0 Индекс – Источники.md
@@ -5,7 +5,7 @@
 
 # Источники
 
-Здесь собраны заметки об основных книгах и статьях, на которые опирались лекции курса по [[Геофилософия\|геофилософии]].
+Здесь собраны заметки об основных книгах и статьях, на которые опирались лекции курса по [[Геофилософия 1\|геофилософии]].
 
 - [[Кейс Геофилософия/5 Источники/Книга - Атлас Петрамодерна\|Книга - Атлас Петрамодерна]]
 - [[Кейс Геофилософия/5 Источники/Книга - Метафизика ландшафта (Подорога)\|Книга - Метафизика ландшафта (Подорога)]]
