--- a/src/site/notes/Кейс Геофилософия/Индекс –база знаний по Геофилософии.md
+++ b/src/site/notes/Кейс Геофилософия/Индекс –база знаний по Геофилософии.md
@@ -10,7 +10,7 @@
 
 Добро пожаловать! Эта база знаний создана на основе транскриптов [одноименного курса лекций](https://www.youtube.com/watch?v=sZ5y-9kIbDw&list=PLUzCBwHhuhXG8TIfQFfTxn4pGj1stdJAJ) Максимилиана Неаполитанского и представляет собой введение в мир геофилософской мысли.
 
-## Два способа исследования**
+## Два способа исследования
 
 Вы можете изучать этот материал двумя основными способами:
 
@@ -27,7 +27,7 @@
 	- **Управление графом:** В его настройках вы можете изменить **Глубину (Depth)**, чтобы увидеть больше связей, а также использовать иконки **🌐 (Глобус)** для перехода на глобальный граф и **↖↗ (Стрелки)** для полноэкранного режима
         
 
-### **2. Через разделы, папки и перекрестные ссылки
+### **2. Через разделы, папки и перекрестные ссылки**
 
 Если вы предпочитаете более традиционный подход, воспользуйтесь оглавлением ниже. Оно содержит ссылки на основные разделы (лекции, темы, понятия), которые помогут вам систематически изучить материал.
 
@@ -44,9 +44,9 @@
 
 Чтобы понять основы, начните с этих заметок:
 
-- [[Геофилософия\|Геофилософия]] — базовое определение.
-- [[Кейс Геофилософия/3 Понятия/Земля vs Территория\|Земля vs Территория]] — центральная оппозиция у [[Делёз, Жиль\|Делёза]] и [[Кейс Геофилософия/4 Авторы/Гваттари, Феликс\|Гваттари]].
-- [[Кейс Геофилософия/2 Темы/Практическая геофилософия\|Практическая геофилософия]] — как применять идеи геофилософии в жизни.
+- [[Геофилософия 1\|Геофилософия 1]] — базовое определение.
+- [[Кейс Геофилософия/3 Понятия/Земля vs Территория\|Земля vs Территория]] — центральная оппозиция у [[Кейс Геофилософия/4 Авторы/Делёз, Жиль\|Делёза]] и [[Кейс Геофилософия/4 Авторы/Гваттари, Феликс\|Гваттари]].
+- [[Кейс Геофилософия/2 Темы/Практическая геофилософия\|Кейс Геофилософия/2 Темы/Практическая геофилософия]] — как применять идеи геофилософии в жизни.
     
 ### **Ключевые проблемы и направления**
 
@@ -58,11 +58,11 @@
 
 Два полюса осмысления Земли:
 
-- **Светлая сторона**: [[Кейс Геофилософия/3 Понятия/Теория Геи\|Теория Геи]], [[Плоть мира\|Плоть мира]], витализм [[Делёз, Жиль\|Делёза]].
-- **Темная сторона**: [[Кейс Геофилософия/2 Темы/Темные теории\|Темные теории]], [[Хтонь\|Хтонь]], [[Кейс Геофилософия/2 Темы/Философия нефти и петромодерн\|Философия нефти и петромодерн]], [[Кейс Геофилософия/3 Понятия/Безосновность (Грунд)\|Безосновность (Грунд)]].
+- **Светлая сторона**: [[Кейс Геофилософия/3 Понятия/Теория Геи\|Теория Геи]], [[Кейс Геофилософия/3 Понятия/Плоть мира\|Плоть мира]], витализм [[Кейс Геофилософия/4 Авторы/Делёз, Жиль\|Делёза]].
+- **Темная сторона**: [[Кейс Геофилософия/2 Темы/Темные теории\|Темные теории]], [[Кейс Геофилософия/3 Понятия/Хтонь\|Хтонь]], [[Кейс Геофилософия/2 Темы/Философия нефти и петромодерн\|Философия нефти и петромодерн]], [[Кейс Геофилософия/3 Понятия/Безосновность (Грунд)\|Безосновность (Грунд)]].
 ### **Ключевые мыслители**
 
-- [[Делёз, Жиль\|Делёз, Жиль]] и [[Кейс Геофилософия/4 Авторы/Гваттари, Феликс\|Гваттари, Феликс]] — основатели.
+- [[Кейс Геофилософия/4 Авторы/Делёз, Жиль\|Делёз, Жиль]] и [[Кейс Геофилософия/4 Авторы/Гваттари, Феликс\|Гваттари, Феликс]] — основатели.
 - [[Кейс Геофилософия/4 Авторы/Латур, Бруно\|Латур, Бруно]] — геоистория и политики природы.
 - [[Кейс Геофилософия/4 Авторы/Харауэй, Донна\|Харауэй, Донна]] — постгуманизм и политики заботы.
 - [[Кейс Геофилософия/4 Авторы/Подорога, Валерий\|Подорога, Валерий]] — метафизика ландшафта.
