--- a/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 07 - Теория Геи.md
+++ b/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 07 - Теория Геи.md
@@ -5,7 +5,7 @@
 
 # Лекция 7: Теория Геи (Лавлок и Латур)
 
-**Основные понятия:** [[Кейс Геофилософия/3 Понятия/Теория Геи\|Теория Геи]], [[Кейс Геофилософия/3 Понятия/Маргаритковый мир\|Маргаритковый мир]], [[Кейс Геофилософия/3 Понятия/Геоистория\|Геоистория]], [[Приземленные\|Приземленные]]
+**Основные понятия:** [[Кейс Геофилософия/3 Понятия/Теория Геи\|Теория Геи]], [[Кейс Геофилософия/3 Понятия/Маргаритковый мир\|Маргаритковый мир]], [[Кейс Геофилософия/3 Понятия/Геоистория\|Геоистория]], [[Кейс Геофилософия/3 Понятия/Приземленные\|Приземленные]]
 **Ключевые авторы:** [[Кейс Геофилософия/4 Авторы/Лавлок, Джеймс\|Лавлок, Джеймс]], [[Кейс Геофилософия/4 Авторы/Латур, Бруно\|Латур, Бруно]], [[Кейс Геофилософия/4 Авторы/Хуэй, Юк\|Хуэй, Юк]]
 
 ## Тезисы
@@ -16,12 +16,12 @@
 - **Критика теории**: Технофобность, антропоцентризм, метафоричность.
 - **Альтернатива — [[Кейс Геофилософия/3 Понятия/Теория Медеи\|Теория Медеи]]**: Жизнь на [[Кейс Геофилософия/3 Понятия/Земля\|Земле]] существует вопреки постоянным процессам самоуничтожения.
 
-### 2. [[Кейс Геофилософия/4 Авторы/Латур, Бруно\|Латур, Бруно]]: от [[Гея\|Геи]] к [[Кейс Геофилософия/3 Понятия/Геоистория\|Геоистории]]
+### 2. [[Кейс Геофилософия/4 Авторы/Латур, Бруно\|Латур, Бруно]]: от [[Кейс Геофилософия/3 Понятия/Гея\|Геи]] к [[Кейс Геофилософия/3 Понятия/Геоистория\|Геоистории]]
 - **[[Кейс Геофилософия/3 Понятия/Геоистория\|Геоистория]]**: [[Кейс Геофилософия/4 Авторы/Латур, Бруно\|Латур]] призывает перейти от "истории" (где [[Кейс Геофилософия/3 Понятия/Земля\|Земля]] — пассивный фон) к "геоистории", где [[Кейс Геофилософия/3 Понятия/Земля\|Земля]] — **полноценный действующий актор**.
 - **Проклятие Атласа**: [[Кейс Геофилософия/4 Авторы/Латур, Бруно\|Латур]] критикует традиционную репрезентацию [[Кейс Геофилософия/3 Понятия/Земля\|Земли]] (глобус) за то, что она представляет планету как гладкий, безпроблемный объем.
 
-### 3. [[Приземленные\|Приземленные]] и [[Кейс Геофилософия/2 Темы/Политическая земля\|Политическая земля]]
-- **Переход от "людей" к "приземленным"**: "[[Приземленные\|Приземленные]]" — те, кто осознал свою неразрывную связь с [[Кейс Геофилософия/3 Понятия/Земля\|Землей]].
+### 3. [[Кейс Геофилософия/3 Понятия/Приземленные\|Приземленные]] и [[Кейс Геофилософия/2 Темы/Политическая земля\|Политическая земля]]
+- **Переход от "людей" к "приземленным"**: "[[Кейс Геофилософия/3 Понятия/Приземленные\|Приземленные]]" — те, кто осознал свою неразрывную связь с [[Кейс Геофилософия/3 Понятия/Земля\|Землей]].
 - **[[Кейс Геофилософия/3 Понятия/Земля\|Земля]] — не мирная мать-природа**: Она находится в состоянии войны с человечеством.
 - **Вопрос о договоре**: [[Кейс Геофилософия/4 Авторы/Латур, Бруно\|Латур]] ставит вопрос, можно ли заключить новый политический договор с самой [[Кейс Геофилософия/3 Понятия/Земля\|Землей]].
 
