--- a/src/site/notes/Кейс Геофилософия/2 Темы/Геополитика.md
+++ b/src/site/notes/Кейс Геофилософия/2 Темы/Геополитика.md
@@ -5,12 +5,12 @@
 
 # Геополитика
 
-**Геополитика** — это дисциплина, изучающая влияние географических факторов на политические процессы. Важно отличать ее от [[Геофилософия\|геофилософии]].
+**Геополитика** — это дисциплина, изучающая влияние географических факторов на политические процессы. Важно отличать ее от [[Геофилософия 1\|геофилософии]].
 
 ## Геофилософия vs. Геополитика
 - **Геополитика** рассматривает [[Кейс Геофилософия/3 Понятия/Земля\|Землю]] как ресурс или арену для политической борьбы.
-- **[[Геофилософия\|Геофилософия]]** видит [[Кейс Геофилософия/3 Понятия/Земля\|Землю]] как силу, которая подрывает и **[[Детерриторизация\|Детерриторизация]]** любой политический порядок.
+- **[[Геофилософия 1\|Геофилософия 1]]** видит [[Кейс Геофилософия/3 Понятия/Земля\|Землю]] как силу, которая подрывает и **[[Детерриторизация\|Детерриторизация]]** любой политический порядок.
 
-## [[Кейс Геофилософия/4 Авторы/Шмитт, Карл\|Шмитт, Карл]] и [[Номос земли\|Номос земли]]
-- **[[Номос земли\|Номос земли]]**: Концепция Шмитта, описывающая изначальное пространственное разделение мира, которое лежит в основе политического порядка.
+## [[Кейс Геофилософия/4 Авторы/Шмитт, Карл\|Шмитт, Карл]] и [[Кейс Геофилософия/3 Понятия/Номос земли\|Номос земли]]
+- **[[Кейс Геофилософия/3 Понятия/Номос земли\|Номос земли]]**: Концепция Шмитта, описывающая изначальное пространственное разделение мира, которое лежит в основе политического порядка.
 - **Оппозиция Море vs. Суша**: Шмитт утверждал, что мировой порядок определялся борьбой между морскими (свободными) и сухопутными (упорядоченными) державами.
