--- a/src/site/notes/Кейс Геофилософия/2 Темы/Политическая земля.md
+++ b/src/site/notes/Кейс Геофилософия/2 Темы/Политическая земля.md
@@ -8,7 +8,7 @@
 
 ## Истоки концепции
 - **[[Кейс Геофилософия/4 Авторы/Латур, Бруно\|Латур, Бруно]]**: Вводит понятие [[Кейс Геофилософия/3 Понятия/Геоистория\|Геоистория]], где [[Кейс Геофилософия/3 Понятия/Земля\|Земля]] становится действующим лицом в политике.
-- **[[Кейс Геофилософия/4 Авторы/Шмитт, Карл\|Шмитт, Карл]]**: Его работа "[[Номос земли\|Номос земли]]" является ключевым источником.
+- **[[Кейс Геофилософия/4 Авторы/Шмитт, Карл\|Шмитт, Карл]]**: Его работа "[[Кейс Геофилософия/3 Понятия/Номос земли\|Номос земли]]" является ключевым источником.
 
 ## Земля как суверен
 - **[[Кейс Геофилософия/3 Понятия/Суверенитет\|Суверенитет]]**: Землю можно помыслить как суверена в смысле [[Кейс Геофилософия/4 Авторы/Шмитт, Карл\|Шмитта]]: **"суверен тот, кто принимает решение о [[Кейс Геофилософия/3 Понятия/Чрезвычайное положение\|Чрезвычайное положение]]"**.
