--- a/src/site/notes/Кейс Геофилософия/2 Темы/Темные теории.md
+++ b/src/site/notes/Кейс Геофилософия/2 Темы/Темные теории.md
@@ -12,7 +12,7 @@
 - **Материя как нечто жуткое**: Материя — это не пассивный ресурс, а активная, странная и часто угрожающая сила.
 
 ## Ключевые концепции
-- **[[Хтонь\|Хтонь]] ([[Кейс Геофилософия/4 Авторы/Агамбен, Джорджо\|Агамбен, Джорджо]])**: Понятие о подземной, смертной стороне Земли.
+- **[[Кейс Геофилософия/3 Понятия/Хтонь\|Хтонь]] ([[Кейс Геофилософия/4 Авторы/Агамбен, Джорджо\|Агамбен, Джорджо]])**: Понятие о подземной, смертной стороне Земли.
 - **[[Кейс Геофилософия/3 Понятия/Танатосфера\|Танатосфера]]**: Сфера смерти, являющаяся неотъемлемой частью планеты.
 - **[[Кейс Геофилософия/3 Понятия/Теория Медеи\|Теория Медеи]]**: Альтернатива [[Кейс Геофилософия/3 Понятия/Теория Геи\|теории Геи]], утверждающая, что жизнь на Земле стремится к самоуничтожению.
 - **[[Кейс Геофилософия/2 Темы/Философия нефти и петромодерн\|Философия нефти и петромодерн]]**: Исследование нефти как темного, подземного агента.
