--- a/src/site/notes/Кейс Геофилософия/2 Темы/Философия нефти и петромодерн.md
+++ b/src/site/notes/Кейс Геофилософия/2 Темы/Философия нефти и петромодерн.md
@@ -7,7 +7,7 @@
 **Философия нефти** — это направление в [[Кейс Геофилософия/2 Темы/Темные теории\|темной геофилософии]], которое исследует нефть не просто как ресурс, а как активного агента, формирующего современную цивилизацию. Эпоху, определяемую нефтью, называют **[[Кейс Геофилософия/3 Понятия/Петромодерн\|Петромодерн]]**.
 
 ## Основные идеи
-- **Нефть как хтоническая сила**: Нефть — это подземный, "темный" ресурс, связанный с [[Хтонь\|хтоническим]] миром.
+- **Нефть как хтоническая сила**: Нефть — это подземный, "темный" ресурс, связанный с [[Кейс Геофилософия/3 Понятия/Хтонь\|хтоническим]] миром.
 - **[[Кейс Геофилософия/3 Понятия/Петромодерн\|Петромодерн]]**: Мы живем в эпоху, где нефть тайно управляет почти всеми аспектами жизни. "[[Кейс Геофилософия/5 Источники/Книга - Атлас Петрамодерна\|Книга - Атлас Петрамодерна]]" картографирует это влияние.
     - **[[Кейс Геофилософия/3 Понятия/Ископаемая власть\|Ископаемая власть]]**: Политическая и экономическая власть часто основана на контроле над ископаемым топливом.
     - **Петро-маскулинность**: Культурный образ мужчины-добытчика.
