--- a/src/site/notes/Кейс Геофилософия/3 Понятия/0 Индекс – Понятия.md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/0 Индекс – Понятия.md
@@ -16,12 +16,12 @@
 - [[Кейс Геофилософия/3 Понятия/Геоистория\|Геоистория]]
 - [[Кейс Геофилософия/3 Понятия/Геологическое как бессознательное\|Геологическое как бессознательное]]
 - [[Кейс Геофилософия/2 Темы/Геофеноменология\|Геофеноменология]]
-- [[Гея\|Гея]]
+- [[Кейс Геофилософия/3 Понятия/Гея\|Гея]]
 - [[Кейс Геофилософия/3 Понятия/Гея vs Хтонь\|Гея vs Хтонь]]
-- [[Гиперобъекты\|Гиперобъекты]]
+- [[Кейс Геофилософия/3 Понятия/Гиперобъекты\|Гиперобъекты]]
 - [[Кейс Геофилософия/3 Понятия/Глаз Бога\|Глаз Бога]]
 - [[Кейс Геофилософия/3 Понятия/Глубинное время (Deep Time)\|Глубинное время (Deep Time)]]
-- [[Детерриторизация и Ретерриторизация\|Детерриторизация и Ретерриторизация]]
+- [[Кейс Геофилософия/3 Понятия/Детерриторизация и Ретерриторизация\|Детерриторизация и Ретерриторизация]]
 - [[Кейс Геофилософия/3 Понятия/Другая темпоральность\|Другая темпоральность]]
 - [[Кейс Геофилософия/3 Понятия/Жить в касании\|Жить в касании]]
 - [[Кейс Геофилософия/3 Понятия/Земля\|Земля]]
@@ -38,16 +38,16 @@
 - [[Кейс Геофилософия/3 Понятия/Межобъектность\|Межобъектность]]
 - [[Кейс Геофилософия/3 Понятия/Нелокальность\|Нелокальность]]
 - [[Кейс Геофилософия/3 Понятия/Номадизм\|Номадизм]]
-- [[Номос земли\|Номос земли]]
-- [[Обоснование\|Обоснование]]
+- [[Кейс Геофилософия/3 Понятия/Номос земли\|Номос земли]]
+- [[Кейс Геофилософия/3 Понятия/Обоснование\|Обоснование]]
 - [[Кейс Геофилософия/3 Понятия/Опасный постгуманизм\|Опасный постгуманизм]]
 - [[Кейс Геофилософия/3 Понятия/Оседание опыта\|Оседание опыта]]
-- [[Основание\|Основание]]
+- [[Кейс Геофилософия/3 Понятия/Основание\|Основание]]
 - [[Кейс Геофилософия/3 Понятия/Петромодерн\|Петромодерн]]
-- [[Плоть мира\|Плоть мира]]
+- [[Кейс Геофилософия/3 Понятия/Плоть мира\|Плоть мира]]
 - [[Кейс Геофилософия/3 Понятия/Поверхность vs Глубина\|Поверхность vs Глубина]]
 - [[Кейс Геофилософия/3 Понятия/Поврежденная земля\|Поврежденная земля]]
-- [[Приземленные\|Приземленные]]
+- [[Кейс Геофилософия/3 Понятия/Приземленные\|Приземленные]]
 - [[Кейс Геофилософия/3 Понятия/Ризома\|Ризома]]
 - [[Кейс Геофилософия/3 Понятия/Ритурнель\|Ритурнель]]
 - [[Кейс Геофилософия/3 Понятия/Священная география\|Священная география]]
@@ -57,14 +57,14 @@
 - [[Кейс Геофилософия/3 Понятия/Танатосфера\|Танатосфера]]
 - [[Кейс Геофилософия/3 Понятия/Тело без органов\|Тело без органов]]
 - [[Кейс Геофилософия/3 Понятия/Темная экология\|Темная экология]]
-- [[Территория\|Территория]]
+- [[Кейс Геофилософия/3 Понятия/Территория\|Территория]]
 - [[Кейс Геофилософия/3 Понятия/Теория Геи\|Теория Геи]]
 - [[Кейс Геофилософия/3 Понятия/Теория Медеи\|Теория Медеи]]
-- [[Трансцендентальная геология\|Трансцендентальная геология]]
+- [[Кейс Геофилософия/3 Понятия/Трансцендентальная геология\|Трансцендентальная геология]]
 - [[Кейс Геофилософия/3 Понятия/Трансцендентальная Земля\|Трансцендентальная Земля]]
 - [[Кейс Геофилософия/3 Понятия/Фазирование\|Фазирование]]
 - [[Кейс Геофилософия/3 Понятия/Феноменология как археология\|Феноменология как археология]]
-- [[Хтонь\|Хтонь]]
+- [[Кейс Геофилософия/3 Понятия/Хтонь\|Хтонь]]
 - [[Кейс Геофилософия/3 Понятия/Хтулхуцен\|Хтулхуцен]]
 - [[Кейс Геофилософия/3 Понятия/Четверица\|Четверица]]
 - [[Кейс Геофилософия/3 Понятия/Чрезвычайное положение\|Чрезвычайное положение]]
