--- a/src/site/notes/Кейс Геофилософия/3 Понятия/Автохтония.md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/Автохтония.md
@@ -4,11 +4,11 @@
 
 # Автохтония
 
-**Автохтония** — в контексте [[Геофилософия\|геофилософии]] [[Делёз, Жиль\|Жиля Делёза]] и [[Кейс Геофилософия/4 Авторы/Гваттари, Феликс\|Феликса Гваттари]] — это **независимость от конкретной территории**. Это способность народа или концептуальной общности существовать, сохраняя свою идентичность, вне привязки к определенному географическому месту.
+**Автохтония** — в контексте [[Геофилософия 1\|геофилософии]] [[Кейс Геофилософия/4 Авторы/Делёз, Жиль\|Жиля Делёза]] и [[Кейс Геофилософия/4 Авторы/Гваттари, Феликс\|Феликса Гваттари]] — это **независимость от конкретной территории**. Это способность народа или концептуальной общности существовать, сохраняя свою идентичность, вне привязки к определенному географическому месту.
 
 ## Суть концепции
-- **[[Кейс Геофилософия/3 Понятия/Земля vs Территория\|Земля vs Территория]]**: Автохтония связана с [[Кейс Геофилософия/3 Понятия/Земля\|Землей]] как концептуальным, детерриторизированным пространством, а не с [[Территория\|Территорией]] как физически ограниченной и кодированной областью.
-- **Освобождение**: Достижение автохтонии — это акт освобождения и **[[Детерриторизация и Ретерриторизация\|детерриторизации]]**.
+- **[[Кейс Геофилософия/3 Понятия/Земля vs Территория\|Земля vs Территория]]**: Автохтония связана с [[Кейс Геофилософия/3 Понятия/Земля\|Землей]] как концептуальным, детерриторизированным пространством, а не с [[Кейс Геофилософия/3 Понятия/Территория\|Территорией]] как физически ограниченной и кодированной областью.
+- **Освобождение**: Достижение автохтонии — это акт освобождения и **[[Кейс Геофилософия/3 Понятия/Детерриторизация и Ретерриторизация\|детерриторизации]]**.
 
 ## Пример: Асгард в "Тор: Рагнарёк"
 В лекции приводится пример из фильма, который иллюстрирует эту идею:
