--- a/src/site/notes/Кейс Геофилософия/3 Понятия/Быть приземленным.md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/Быть приземленным.md
@@ -4,13 +4,13 @@
 
 # Быть приземленным
 
-**Быть приземленным** — это практическая и этическая установка в [[Геофилософия\|геофилософии]], предложенная [[Кейс Геофилософия/4 Авторы/Латур, Бруно\|Бруно Латуром]]. Это состояние, в котором человек осознает свою полную встроенность в земные процессы и отказывается от иллюзии отделенности от планеты.
+**Быть приземленным** — это практическая и этическая установка в [[Геофилософия 1\|геофилософии]], предложенная [[Кейс Геофилософия/4 Авторы/Латур, Бруно\|Бруно Латуром]]. Это состояние, в котором человек осознает свою полную встроенность в земные процессы и отказывается от иллюзии отделенности от планеты.
 
 ## Суть концепции
 - **Противоположность "возвышенному"**: Если философия "возвышенного" ([[Кейс Геофилософия/4 Авторы/Кант, Иммануил\|Кант, Иммануил]]) предполагает дистанцию и взгляд "сверху", то "приземленность" — это взгляд "изнутри", с самой [[Кейс Геофилософия/3 Понятия/Земля\|Земли]].
 - **Отказ от "[[Кейс Геофилософия/3 Понятия/Глаз Бога\|Глаз Бога]]"**: Быть приземленным — значит отказаться от претензии на бестелесный, объективный взгляд "из ниоткуда", который критиковала [[Кейс Геофилософия/4 Авторы/Харауэй, Донна\|Харауэй, Донна]].
 - **Признание зависимости**: Это осознание того, что "от Земли не убежать", и что наше выживание полностью зависит от хрупких планетарных систем.
 
-## Связь с [[Приземленные\|Приземленные]]
-- "Быть приземленным" — это характеристика нового политического субъекта, которого [[Кейс Геофилософия/4 Авторы/Латур, Бруно\|Латур]] называет **"[[Приземленные\|Приземленные]]"**.
+## Связь с [[Кейс Геофилософия/3 Понятия/Приземленные\|Приземленные]]
+- "Быть приземленным" — это характеристика нового политического субъекта, которого [[Кейс Геофилософия/4 Авторы/Латур, Бруно\|Латур]] называет **"[[Кейс Геофилософия/3 Понятия/Приземленные\|Приземленные]]"**.
 - Эта практика является основой для **[[Кейс Геофилософия/2 Темы/Политики заботы\|Политики заботы]]** и выживания в эпоху [[Кейс Геофилософия/3 Понятия/Антропоцен\|Антропоцена]].
