--- a/src/site/notes/Кейс Геофилософия/3 Понятия/Критика репрезентации.md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/Критика репрезентации.md
@@ -8,7 +8,7 @@
 
 ## Суть критики
 - **Проблема отражения**: Традиционное понимание репрезентации (представления) предполагает, что у нас есть реальность (оригинал) и ее отражение (копия, например, карта или научная теория). Эта модель подразумевает разрыв и дистанцию между ними.
-- **Карта — не отражение**: Критика утверждает, что, например, карта — это не просто пассивное отражение [[Территория\|территории]]. Она **активно конструирует** эту территорию, делая одни вещи видимыми, а другие — невидимыми.
+- **Карта — не отражение**: Критика утверждает, что, например, карта — это не просто пассивное отражение [[Кейс Геофилософия/3 Понятия/Территория\|территории]]. Она **активно конструирует** эту территорию, делая одни вещи видимыми, а другие — невидимыми.
 - **Сборка, а не копия**: Карта (или любое знание) — это не копия, а **сборка**, гибрид, результат множества практик, решений и технологий.
 
 ## [[Кейс Геофилософия/3 Понятия/Синоптическая vs Навигационная интерпретация\|Синоптическая vs Навигационная интерпретация]]
@@ -16,4 +16,4 @@
 - **Навигационный взгляд** разрушает эту идею: карта — это инструмент, который работает только **внутри** мира, в процессе движения и взаимодействия, а не как его внешнее отражение.
 
 ## Значение
-- Эта критика позволяет перейти от [[Геофилософия — это не философия земли\|философии *о* Земле]] к [[Геофилософия\|геофилософии *с* Землей]], где мы признаем нашу неразрывную связь с планетой, а не просто "репрезентируем" ее.
+- Эта критика позволяет перейти от [[Геофилософия — это не философия земли\|философии *о* Земле]] к [[Геофилософия 1\|геофилософии *с* Землей]], где мы признаем нашу неразрывную связь с планетой, а не просто "репрезентируем" ее.
