--- a/src/site/notes/Кейс Геофилософия/3 Понятия/Межобъектность.md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/Межобъектность.md
@@ -4,14 +4,14 @@
 
 # Межобъектность
 
-**Межобъектность** — это одна из пяти ключевых характеристик [[Гиперобъекты\|гиперобъектов]] в философии [[Кейс Геофилософия/4 Авторы/Мортон, Тимоти\|Тимоти Мортона]].
+**Межобъектность** — это одна из пяти ключевых характеристик [[Кейс Геофилософия/3 Понятия/Гиперобъекты\|гиперобъектов]] в философии [[Кейс Геофилософия/4 Авторы/Мортон, Тимоти\|Тимоти Мортона]].
 
 ## Определение
-- Межобъектность означает, что **[[Гиперобъекты\|Гиперобъекты]] существуют в пространстве между вещами**.
+- Межобъектность означает, что **[[Кейс Геофилософия/3 Понятия/Гиперобъекты\|Гиперобъекты]] существуют в пространстве между вещами**.
 - Традиционно мы мыслим мир как состоящий из объектов и пустоты между ними. [[Кейс Геофилософия/4 Авторы/Мортон, Тимоти\|Мортон]] утверждает, что сама эта "пустота", само это пространство отношений и есть гиперобъект.
 - **Пример**: Мы можем указать на пластиковую бутылку и пластиковый пакет. Но сам гиперобъект "пластик" — это не только эти вещи, но и вся невидимая система производства, распределения и загрязнения, которая их связывает.
 
 ## Значение
 - Эта концепция разрушает наше интуитивное представление о мире как о наборе дискретных, отдельных объектов.
-- Она показывает, что мы всегда находимся внутри **поля отношений**, которое само является [[Гиперобъекты\|гиперобъектом]]. Нет "внешней" позиции, из которой можно было бы наблюдать за этим полем.
-- Воздух или кислород, упомянутые в лекции, являются хорошим примером такого межобъектного [[Гиперобъекты\|гиперобъекта]]: он повсюду, между всеми вещами, и мы замечаем его, только когда он исчезает.
+- Она показывает, что мы всегда находимся внутри **поля отношений**, которое само является [[Кейс Геофилософия/3 Понятия/Гиперобъекты\|гиперобъектом]]. Нет "внешней" позиции, из которой можно было бы наблюдать за этим полем.
+- Воздух или кислород, упомянутые в лекции, являются хорошим примером такого межобъектного [[Кейс Геофилософия/3 Понятия/Гиперобъекты\|гиперобъекта]]: он повсюду, между всеми вещами, и мы замечаем его, только когда он исчезает.
