--- a/src/site/notes/Кейс Геофилософия/3 Понятия/Номадизм.md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/Номадизм.md
@@ -4,15 +4,15 @@
 
 # Номадизм
 
-**Номадизм** — это концепт [[Делёз, Жиль\|Жиля Делёза]] и [[Кейс Геофилософия/4 Авторы/Гваттари, Феликс\|Гваттари]] из книги "[[Тысяча плато\|Тысяча плато]]", который описывает особый способ бытия и мышления, противопоставленный оседлости и государственной организации.
+**Номадизм** — это концепт [[Кейс Геофилософия/4 Авторы/Делёз, Жиль\|Жиля Делёза]] и [[Кейс Геофилософия/4 Авторы/Гваттари, Феликс\|Гваттари]] из книги "[[Тысяча плато\|Тысяча плато]]", который описывает особый способ бытия и мышления, противопоставленный оседлости и государственной организации.
 
 ## Ключевые отличия от кочевничества
 - **Это не просто миграция**: Номадизм — это не перемещение из одной точки в другую. Кочевник движется, чтобы добраться куда-то. Номад, наоборот, движется, чтобы **оставаться на месте**.
-- **Путешествие на месте**: Лектор приводит слова [[Делёз, Жиль\|Делёза]] о его жене: "Зачем ей путешествовать? У нее есть ее романы". Номадизм — это **интенсивное путешествие**, которое происходит в одной точке. Это "бег на месте", но с огромной скоростью.
+- **Путешествие на месте**: Лектор приводит слова [[Кейс Геофилософия/4 Авторы/Делёз, Жиль\|Делёза]] о его жене: "Зачем ей путешествовать? У нее есть ее романы". Номадизм — это **интенсивное путешествие**, которое происходит в одной точке. Это "бег на месте", но с огромной скоростью.
 
 ## Характеристики
 - **Гладкое пространство**: Номад обитает не в "исчерченном" (государственном, размеченном) пространстве, а в "гладком" — открытом, не имеющем фиксированных путей.
-- **[[Детерриторизация\|Детерриторизация]]**: Номадизм — это практика постоянной детерриторизации. Намад не захватывает [[Территория\|Территорию]], а постоянно ускользает от нее.
+- **[[Детерриторизация\|Детерриторизация]]**: Номадизм — это практика постоянной детерриторизации. Намад не захватывает [[Кейс Геофилософия/3 Понятия/Территория\|Территорию]], а постоянно ускользает от нее.
 - **"Машина войны"**: Номады являются носителями "машины войны" — не в смысле ведения реальной войны, а как силы, которая находится "вовне" государства и подрывает его порядок.
 
 ## Значение
