--- a/src/site/notes/Кейс Геофилософия/4 Авторы/Агамбен, Джорджо.md
+++ b/src/site/notes/Кейс Геофилософия/4 Авторы/Агамбен, Джорджо.md
@@ -7,6 +7,6 @@
 Итальянский философ, чьи идеи являются центральными для [[Лекция 09 - Темная Земля (Агамбен и философия нефти)\|девятой лекции]] и концепции [[Темная земля\|Темная земля]].
 
 ## Вклад в геофилософию
-- **[[Кейс Геофилософия/3 Понятия/Гея vs Хтонь\|Гея vs Хтонь]]**: Главный вклад Агамбена в геофилософию — это его критика [[Кейс Геофилософия/3 Понятия/Теория Геи\|Теория Геи]] и введение концепции [[Хтонь\|Хтонь]]. Он утверждает, что современная мысль забыла о хтонической, подземной и смертной стороне [[Кейс Геофилософия/3 Понятия/Земля\|Земли]], фокусируясь только на ее живой поверхности, [[Гея\|Гее]].
-- **[[Кейс Геофилософия/3 Понятия/Танатосфера\|Танатосфера]]**: Он связывает [[Хтонь\|Хтонь]] с "танатосферой", сферой смерти, утверждая, что экологический кризис и страх смерти вызваны отделением жизни от ее темного основания.
+- **[[Кейс Геофилософия/3 Понятия/Гея vs Хтонь\|Гея vs Хтонь]]**: Главный вклад Агамбена в геофилософию — это его критика [[Кейс Геофилософия/3 Понятия/Теория Геи\|Теория Геи]] и введение концепции [[Кейс Геофилософия/3 Понятия/Хтонь\|Хтонь]]. Он утверждает, что современная мысль забыла о хтонической, подземной и смертной стороне [[Кейс Геофилософия/3 Понятия/Земля\|Земли]], фокусируясь только на ее живой поверхности, [[Кейс Геофилософия/3 Понятия/Гея\|Гее]].
+- **[[Кейс Геофилософия/3 Понятия/Танатосфера\|Танатосфера]]**: Он связывает [[Кейс Геофилософия/3 Понятия/Хтонь\|Хтонь]] с "танатосферой", сферой смерти, утверждая, что экологический кризис и страх смерти вызваны отделением жизни от ее темного основания.
 - **Человек как хтоническое существо**: Агамбен подчеркивает, что человек по своей сути связан с глубиной (*humus*), а не с поверхностью, и является "существом из глубины".
