--- a/src/site/notes/Кейс Геофилософия/4 Авторы/Декарт, Рене.md
+++ b/src/site/notes/Кейс Геофилософия/4 Авторы/Декарт, Рене.md
@@ -7,5 +7,5 @@
 Французский философ, математик и ученый, один из основоположников философии Нового времени.
 
 ## Упоминания в курсе
-- **Дуализм**: Его знаменитый дуализм **разума (res cogitans)** и **материи (res extensa)** является одной из главных мишеней для критики в [[Кейс Геофилософия/2 Темы/Постгуманизм\|постгуманизме]] и [[Геофилософия\|геофилософии]], так как он утверждает радикальное разделение между мыслящим человеком и пассивным, протяженным миром.
+- **Дуализм**: Его знаменитый дуализм **разума (res cogitans)** и **материи (res extensa)** является одной из главных мишеней для критики в [[Кейс Геофилософия/2 Темы/Постгуманизм\|постгуманизме]] и [[Геофилософия 1\|геофилософии]], так как он утверждает радикальное разделение между мыслящим человеком и пассивным, протяженным миром.
 - **Парадокс вечных истин**: В [[Лекция 08 - Политическая Земля (Шмитт и Латур)\|восьмой лекции]] упоминается его парадокс: если Бог всесилен, может ли он изменить созданные им же вечные истины (например, законы математики)? Этот парадокс используется для иллюстрации проблемы [[Кейс Геофилософия/3 Понятия/Суверенитет\|суверенитета]].
