--- a/src/site/notes/Кейс Геофилософия/4 Авторы/Лиотар, Жан-Франсуа.md
+++ b/src/site/notes/Кейс Геофилософия/4 Авторы/Лиотар, Жан-Франсуа.md
@@ -9,4 +9,4 @@
 ## Упоминания в курсе
 - **[[Кейс Геофилософия/2 Темы/Смерть больших нарративов\|Смерть больших нарративов]]**: Его работа "Состояние постмодерна" является источником концепции "смерти" или "недоверия к" **мета-нарративам**.
 - Лиотар утверждал, что эпоха универсальных объяснительных систем (Просвещение, марксизм, христианство) закончилась. На смену им приходит множество локальных, малых "языковых игр" или "микро-нарративов".
-- Эта идея напрямую связана с [[Геофилософия\|геофилософией]], поскольку "Природа" и "[[Кейс Геофилософия/3 Понятия/Земля\|Земля]]" (с большой буквы) также являются такими большими нарративами, которые "умерли", уступив место [[Кейс Геофилософия/2 Темы/Множественность (миров, природ, земель)\|Множественность (миров, природ, земель)]].
+- Эта идея напрямую связана с [[Геофилософия 1\|геофилософией]], поскольку "Природа" и "[[Кейс Геофилософия/3 Понятия/Земля\|Земля]]" (с большой буквы) также являются такими большими нарративами, которые "умерли", уступив место [[Кейс Геофилософия/2 Темы/Множественность (миров, природ, земель)\|Множественность (миров, природ, земель)]].
