--- a/src/site/notes/Кейс Геофилософия/4 Авторы/Шварц, Елена.md
+++ b/src/site/notes/Кейс Геофилософия/4 Авторы/Шварц, Елена.md
@@ -7,5 +7,5 @@
 Русская поэтесса.
 
 ## Упоминания в курсе
-- В [[Лекция 09 - Темная Земля (Агамбен и философия нефти)\|девятой лекции]] ее стихотворение **"Земля, земля, ты ешь людей..."** приводится как художественная иллюстрация к концепции **[[Хтонь\|Хтонь]]** [[Кейс Геофилософия/4 Авторы/Агамбен, Джорджо\|Джорджо Агамбена]].
-- Ее поэзия описывает [[Кейс Геофилософия/3 Понятия/Земля\|Землю]] как активную, хищную, темную силу, которая "чавкает во тьме" и "всех переживет". Это идеально соответствует идее [[Темная земля\|темной земли]], противопоставленной "светлой" [[Гея\|Гее]].
+- В [[Лекция 09 - Темная Земля (Агамбен и философия нефти)\|девятой лекции]] ее стихотворение **"Земля, земля, ты ешь людей..."** приводится как художественная иллюстрация к концепции **[[Кейс Геофилософия/3 Понятия/Хтонь\|Хтонь]]** [[Кейс Геофилософия/4 Авторы/Агамбен, Джорджо\|Джорджо Агамбена]].
+- Ее поэзия описывает [[Кейс Геофилософия/3 Понятия/Земля\|Землю]] как активную, хищную, темную силу, которая "чавкает во тьме" и "всех переживет". Это идеально соответствует идее [[Темная земля\|темной земли]], противопоставленной "светлой" [[Кейс Геофилософия/3 Понятия/Гея\|Гее]].
