--- a/src/site/notes/Кейс Геофилософия/5 Источники/Книга - Метафизика ландшафта (Подорога).md
+++ b/src/site/notes/Кейс Геофилософия/5 Источники/Книга - Метафизика ландшафта (Подорога).md
@@ -11,6 +11,6 @@
 
 ## Основные идеи
 - **Топология философского мышления**: Подорога исследует, как конкретное пространство, ландшафт и телесность философа формируют его идеи.
-- **[[Кейс Геофилософия/3 Понятия/Ландшафт\|Ландшафт]] как синтез**: Книга анализирует философские "ландшафты" [[Кьеркегор, Сёрен\|Кьеркегора]], [[Кейс Геофилософия/4 Авторы/Ницше, Фридрих\|Ницше]] и [[Кейс Геофилософия/4 Авторы/Хайдеггер, Мартин\|Хайдеггера]], показывая, как биография, география, тело и текст сплетаются в единое "[[Кейс Геофилософия/3 Понятия/Земля произведений\|произведение]]".
+- **[[Кейс Геофилософия/3 Понятия/Ландшафт\|Ландшафт]] как синтез**: Книга анализирует философские "ландшафты" [[Кейс Геофилософия/4 Авторы/Кьеркегор, Сёрен\|Кьеркегора]], [[Кейс Геофилософия/4 Авторы/Ницше, Фридрих\|Ницше]] и [[Кейс Геофилософия/4 Авторы/Хайдеггер, Мартин\|Хайдеггера]], показывая, как биография, география, тело и текст сплетаются в единое "[[Кейс Геофилософия/3 Понятия/Земля произведений\|произведение]]".
 - **Сенсомоторный опыт**: Большое внимание уделяется телесному опыту мышления, например, "задержанному дыханию" Кьеркегора или влиянию болезни и климата на философию Ницше.
 - **Метод**: Подорога использует метод перечисления, создавая плотные "ландшафтные" описания жизни и мысли философов, чтобы показать их неразрывную связь с местом.
