--- a/src/site/notes/Кейс Геофилософия/5 Источники/Статья - Гея и Хтонь (Агамбен).md
+++ b/src/site/notes/Кейс Геофилософия/5 Источники/Статья - Гея и Хтонь (Агамбен).md
@@ -10,7 +10,7 @@
 Эта статья является основой для анализа [[Темная земля\|темной земли]] в [[Лекция 09 - Темная Земля (Агамбен и философия нефти)\|девятой лекции]].
 
 ## Основные идеи
-- **Критика [[Кейс Геофилософия/3 Понятия/Теория Геи\|теории Геи]]**: Агамбен критикует концепцию [[Гея\|Геи]] [[Кейс Геофилософия/4 Авторы/Лавлок, Джеймс\|Джеймса Лавлока]] за то, что она описывает только живую, видимую поверхность Земли, игнорируя ее темную, подземную сторону.
-- **[[Кейс Геофилософия/3 Понятия/Гея vs Хтонь\|Гея vs Хтонь]]**: Он вводит оппозицию между [[Гея\|Геей]] (поверхностью) и **[[Хтонь\|Хтонь]]** (подземным миром). Согласно мифам, [[Хтонь\|Хтонь]] первична, а [[Гея\|Гея]] — это лишь ее "мантия" или второе имя.
-- **[[Кейс Геофилософия/3 Понятия/Танатосфера\|Танатосфера]]**: [[Хтонь\|Хтонь]] связана со сферой смерти, "танатосферой", которая является неотъемлемой частью планетарной реальности.
-- **Забвение [[Хтонь\|Хтони]]**: Агамбен утверждает, что современный экологический кризис и страх смерти вызваны тем, что наша культура отделила жизнь ([[Гея\|Гея]]) от ее смертного основания ([[Хтонь\|Хтонь]]). Необходимо мыслить их вместе.
+- **Критика [[Кейс Геофилософия/3 Понятия/Теория Геи\|теории Геи]]**: Агамбен критикует концепцию [[Кейс Геофилософия/3 Понятия/Гея\|Геи]] [[Кейс Геофилософия/4 Авторы/Лавлок, Джеймс\|Джеймса Лавлока]] за то, что она описывает только живую, видимую поверхность Земли, игнорируя ее темную, подземную сторону.
+- **[[Кейс Геофилософия/3 Понятия/Гея vs Хтонь\|Гея vs Хтонь]]**: Он вводит оппозицию между [[Кейс Геофилософия/3 Понятия/Гея\|Геей]] (поверхностью) и **[[Кейс Геофилософия/3 Понятия/Хтонь\|Хтонь]]** (подземным миром). Согласно мифам, [[Кейс Геофилософия/3 Понятия/Хтонь\|Хтонь]] первична, а [[Кейс Геофилософия/3 Понятия/Гея\|Гея]] — это лишь ее "мантия" или второе имя.
+- **[[Кейс Геофилософия/3 Понятия/Танатосфера\|Танатосфера]]**: [[Кейс Геофилософия/3 Понятия/Хтонь\|Хтонь]] связана со сферой смерти, "танатосферой", которая является неотъемлемой частью планетарной реальности.
+- **Забвение [[Кейс Геофилософия/3 Понятия/Хтонь\|Хтони]]**: Агамбен утверждает, что современный экологический кризис и страх смерти вызваны тем, что наша культура отделила жизнь ([[Кейс Геофилософия/3 Понятия/Гея\|Гея]]) от ее смертного основания ([[Кейс Геофилософия/3 Понятия/Хтонь\|Хтонь]]). Необходимо мыслить их вместе.
